--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-08-08 05:58:47
+lastsearch = 2024-08-08 10:41:17
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -54,7 +54,7 @@ url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-ra
 [books.google.com]
 match = -123.8%%
 title = A Critical Pronouncing Dictionary, and Expositor of the ...
-url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKDoaxspn&sig=ACfU3U0OSh_i_TmqwVWjiVDxjMce_Htrzg&hl=en&sa=X&ved=2ahUKEwipjdXS_eOHAxWlkokEHWgcKeYQ6AF6BAgcEAM
+url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKDobEruo&sig=ACfU3U2i7h4VR5IqHKYJmQT4tyqFGKKU5g&hl=en&sa=X&ved=2ahUKEwjo_IzlvOSHAxXKL0QIHSdFC1IQ6AF6BAhDEAM
 
 [www.diepxuan.com]
 match = -81.0%%
