--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-08-08 10:19:12
+lastsearch = 2024-08-08 10:43:01
 
 [everonvn.com.vn]
-match = -11.1%%
-title = Bộ Everon Ep1831 - Curtis
-url = https://everonvn.com.vn/everon/630/bo-everon-ep1831
+match = -94.4%%
+title = Bộ Everon Ep 1738 - chăn ga gối đệm Everon
+url = https://everonvn.com.vn/everon/553/bo-everon-ep-1738?srsltid=AfmBOopc0LpA1iTU_WLxuh7or8E8sQ5KPVxHjOEki9U9SWU1ehOGVxOe
 
 [www.lazada.vn]
-match = -161.1%%
-title = Hoạt động♀Chất lượng cao Vỏ gối bông 45x65 etami, mềm mại ...
-url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1
+match = -133.3%%
+title = [FREESHIP MAX] Vỏ gối ôm satin cao cấp [Bear Bedding]
+url = https://www.lazada.vn/products/freeship-max-vo-goi-om-satin-cao-cap-bear-bedding-i2125036248.html?srsltid=AfmBOopVwkVoVrgVSLI8sLlaGMFzBzeNi7HBWOz3HmpPNaE7x0JnQe13
 
 [www.reddit.com]
 match = -150.0%%
@@ -34,12 +34,12 @@ url = https://muathongminh.vn/xu-huong-vo-goi-dau-cotton-poly-45x65-ao-goi-nam-n
 [www.diepxuan.com]
 match = -11.1%%
 title = Vỏ gối EPM21070 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-epm21070-45x65.html
+url = https://www.diepxuan.com/vo-goi-epm21070-45x65.html?srsltid=AfmBOopu3Jgxp0ocfAt9VMpQGfbr7fn6pB89H7gdwzhGfQOfor346cVP
 
 [www.everonqb.com]
-match = -111.1%%
-title = Vỏ gối EPM21072 45x65 - Everon Quảng Bình Trang Chủ
-url = https://www.everonqb.com/vo-goi-epm21072-45x65.html
+match = -100.0%%
+title = Vỏ gối EP1812 45x65 - Everon Quảng Bình Trang Chủ
+url = https://www.everonqb.com/vo-goi-ep1812-45x65.html
 
 [shopee.vn]
 match = -127.8%%
