--- a/images/chieu-cay-cao-bang-a-16/config.ini
+++ b/images/chieu-cay-cao-bang-a-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-16.html
 lastopen = 2024-06-09 22:42:42
 
 [search]
-lastsearch = 2024-08-08 06:33:08
+lastsearch = 2024-08-08 10:46:27
 
 [shopee.vn]
-match = 4.3%%
-title = Chiếu Trúc Cao Bằng - Chiếu trúc cá nhân
-url = https://shopee.vn/Chiếu-Trúc-Cao-Bằng-Chiếu-trúc-cá-nhân-i.81313558.19277857647
+match = 34.8%%
+title = CHIẾU TRÚC THANH CAO BẰNG 1M4X1M95
+url = https://shopee.vn/CHIẾU-TRÚC-THANH-CAO-BẰNG-1M4X1M95-i.231768286.18532306098
 
 [www.diepxuan.com]
 match = 26.1%%
@@ -67,9 +67,9 @@ title = Độc đáo các sản phẩm từ trúc Cao Bằng
 url = https://caobang.gov.vn/viet-nam-dat-nuoc-con-nguoi/doc-dao-cac-san-pham-tu-truc-cao-bang-778155
 
 [www.facebook.com]
-match = 21.7%%
-title = Chiếu Trúc Cao Sơn Cao Bằng | Cao Bang
-url = https://www.facebook.com/chieutruccaobangcbg/
+match = -52.2%%
+title = Chiếu trúc Cao Bằng, Chiếu trúc thanh, Chiếu trúc cây
+url = https://www.facebook.com/chieutrucvietso1/
 
 [www.youtube.com]
 match = -95.7%%
@@ -99,7 +99,7 @@ url = https://congthuong.vn/chieu-truc-sao-cao-bang-121190.html
 [www.lazada.vn]
 match = -69.6%%
 title = Chiếu trúc cao bằng in hoa,Chiếu Trúc Tăm Tây Bắc Mát ...
-url = https://www.lazada.vn/products/chieu-truc-cao-bang-in-hoachieu-truc-tam-tay-bac-mat-lanhdu-kich-thuoclam-theo-yeu-cau-sichieu-cao-bang-hoa-xanh-i2511779007-s12313024730.html?from_gmc=1&fl_tag=1&srsltid=AfmBOopZNn8_DRSg3XbyhsTLdUe70kUH92OLHTGF2dbrSnWVLFkGVvCF
+url = https://www.lazada.vn/products/chieu-truc-cao-bang-in-hoachieu-truc-tam-tay-bac-mat-lanhdu-kich-thuoclam-theo-yeu-cau-sichieu-cao-bang-hoa-xanh-i2511779007-s12313024730.html?from_gmc=1&fl_tag=1
 
 [caobanggreen.vn]
 match = -39.1%%
