--- a/images/chieu-dieu-hoa-khong-goi-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-18.html
 lastopen = 2024-06-09 22:26:01
 
 [search]
-lastsearch = 2024-08-08 09:57:19
+lastsearch = 2024-08-08 10:35:01
 
 [demxanh.com]
 match = 0.0%%
 title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html?srsltid=AfmBOopKGh8R3SStPd_tEZV6CCz0gAWs3ifkEo7OwoF8GmA-bCyXS-em
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [shopee.vn]
 match = 0.0%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/search?keyword=chiếu điều hoà
 [demviethome.vn]
 match = 14.8%%
 title = Chiếu điều hòa Latex C18 giá rẻ hà nội. ...
-url = https://demviethome.vn/chieu-dieu-hoa-latex-c18/?srsltid=AfmBOormrupSff7lxe2ZCrOwtYmDL8MH3VjWOF4hUadHSrQsZjoSaVLp
+url = https://demviethome.vn/chieu-dieu-hoa-latex-c18/
 
 [lybalansieucute.com]
 match = 37.0%%
@@ -169,5 +169,5 @@ url = https://chiaki.vn/chieu-dieu-hoa
 [spacet.vn]
 match = -40.7%%
 title = Hướng dẫn giặt chiếu điều hòa đúng cách, đơn giản, hiệu ...
-url = https://spacet.vn/blog/nguon-cam-hung/huong-dan-giat-chieu-dieu-hoa-dung-cach-don-gian-hieu-qua?srsltid=AfmBOoqj514lPWD4MlKfA2tMTy4_cyIiBAyYrVg_F4J9xoPnt2jJjlfP
+url = https://spacet.vn/blog/nguon-cam-hung/huong-dan-giat-chieu-dieu-hoa-dung-cach-don-gian-hieu-qua
 
