--- a/images/chieu-truc-que-lam-loai-2-10/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-10/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-10.html
 lastopen = 2024-06-07 00:19:30
 
 [search]
-lastsearch = 2024-08-08 06:56:22
+lastsearch = 2024-08-08 10:46:06
 
 [thegioidemviet.vn]
-match = 21.4%%
-title = BẢNG GIÁ Chiếu Trúc Việt Nam mới nhất ...
-url = https://thegioidemviet.vn/chieu-truc/
+match = 35.7%%
+title = Bảng Giá Chiếu Trúc Quế Lâm [Chính hãng
+url = https://thegioidemviet.vn/chieu-truc-que-lam/
 
 [chieutrelanlan.com]
 match = 25.0%%
@@ -33,7 +33,7 @@ url = https://demxanh.com/chieu-truc.html
 
 [tiki.vn]
 match = -39.3%%
-title = Chiếu trúc hạt hàng chính hãng, giao nhanh - Tháng 7, 2024
+title = Chiếu trúc hạt hàng chính hãng, giao nhanh - Tháng 8, 2024
 url = https://tiki.vn/search?q=chiếu trúc hạt
 
 [www.lazada.vn]
