--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-08-08 06:16:52
+lastsearch = 2024-08-08 10:41:38
 
 [www.diepxuan.com]
 match = 25.0%%
-title = Ga chun EPMROMAN 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/ga-chun-epmroman-160x200.html
+title = Ga chun EPCARLESS 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/ga-chun-epcarless-180x200.html
 
 [www.qcyc.ca]
 match = -53.6%%
