--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-08-08 03:26:34
+lastsearch = 2024-08-08 10:37:05
 
 [www.bible.com]
 match = -64.7%%
@@ -32,9 +32,9 @@ title = Mùng chụp tự bung ĐỈNH VUÔNG không viền chân
 url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-hong.html
 
 [www.churchofjesuschrist.org]
-match = -205.9%%
-title = 1 Nifai 18 - The Church of Jesus Christ of Latter-day Saints
-url = https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/18?lang=tpi
+match = -200.0%%
+title = 1 Nifai 7 - The Church of Jesus Christ of Latter-day Saints
+url = https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/7?lang=tpi
 
 [scert.mizoram.gov.in]
 match = -18.2%%
@@ -104,7 +104,7 @@ url = https://biblehub.com/job/20-22.htm
 [www.bing.com]
 match = -250.0%%
 title = Bing
-url = https://www.bing.com/
+url = http://www.bing.com/
 
 [espndeportes.espn.com]
 match = -82.4%%
