--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-08-08 09:46:54
+lastsearch = 2024-08-08 10:41:59
 
 [www.lazada.vn]
 match = -94.4%%
 title = Nệm Siêu Nhẹ Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/nem-sieu-nhe/
+url = https://www.lazada.vn/tag/nem-sieu-nhe/?srsltid=AfmBOopQ-f3J5S5gW-Ef8fn6wRvY49QV1RQ7BzZJNiHaZcNBjULyE-P_
 
 [m.facebook.com]
 match = -161.1%%
@@ -32,9 +32,9 @@ title = Khi nào nem chua chín? Cách nhận biết ...
 url = https://cotienfoods.vn/blogs/an-ngon/khi-nao-nem-chua-chin
 
 [www.facebook.com]
-match = -61.1%%
-title = NEM Fashion - ÁO KHOÁC LÔNG VŨ SIÊU NHẸ
-url = https://www.facebook.com/nemfashion.official/posts/áo-khoác-lông-vũsiêu-nhẹ-siêu-ấm-chỉ-từ-𝟏𝟏𝟗𝟗𝐊-với-xu-thế-phát-triển-của-thời-tra/1942429895894902/
+match = -94.4%%
+title = Bếp nhà Toronto 🇨🇦 | ☘️NEM CHUA LÁ ỔI 15$ 10 cái
+url = https://www.facebook.com/groups/396891758392980/posts/️nem-chua-lá-ổi-15-10-cái-nem-chua-thanh-hóa-20-15-cái-nem-chua-nhà-e-chuẩn-nem-/1218751472873667/
 
 [voz.vn]
 match = 11.1%%
@@ -87,9 +87,9 @@ title = CÙNG VÀO BẾP LÀM NEM NƯỚNG NHA TRANG SIÊU HẤP ...
 url = https://www.youtube.com/watch?v=guu4UvG6cKY
 
 [www.tiktok.com]
-match = -77.8%%
-title = How Long to Cook Nem Nuong in Air Fryer
-url = https://www.tiktok.com/discover/how-long-to-cook-nem-nuong-in-air-fryer
+match = 27.8%%
+title = Nem Nuong Air Fryer
+url = https://www.tiktok.com/discover/nem-nuong-air-fryer?lang=en
 
 [vi.wikipedia.org]
 match = -27.8%%
