--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-08-08 10:14:25
+lastsearch = 2024-08-08 10:46:48
 
 [en.wikipedia.org]
-match = -31.2%%
-title = Gwangju Uprising
-url = https://en.wikipedia.org/wiki/Gwangju_Uprising
+match = 21.7%%
+title = Timeline of Korean history
+url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
 
 [www.britannica.com]
 match = 0.0%%
@@ -112,9 +112,9 @@ title =
 url = https://www.koreanclass101.com/korean-age/
 
 [www.tiktok.com]
-match = -13.0%%
-title = Triple H Talks about Jacob Fatu
-url = https://www.tiktok.com/discover/triple-h-talks-about-jacob-fatu
+match = -39.1%%
+title = Wont Let Me Talk Basic Training Valorant
+url = https://www.tiktok.com/discover/wont-let-me-talk-basic-training-valorant
 
 [www.unikorea.go.kr]
 match = -113.0%%
@@ -159,7 +159,7 @@ url = https://www.aljazeera.com/news/2024/7/19/on-north-koreas-tense-border-swis
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=2a2dd4cd458323c6&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwi9z67ktuSHAxX2DHkGHRn8HxoQsZYEegQIIxAC
+url = https://www.google.com/search?sca_esv=3e5d0a5c4fd189c4&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwj7jPeCvuSHAxWLFDQIHYjzCnQQsZYEegQISxAC
 
 [produccionesitaca.es]
 match = -21.4%%
