--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-08-08 04:57:43
+lastsearch = 2024-08-08 10:45:47
 
 [en.wikipedia.org]
-match = 15.0%%
-title = Timeline of Korean history
-url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
+match = -12.5%%
+title = Gwangju Uprising
+url = https://en.wikipedia.org/wiki/Gwangju_Uprising
 
 [peacehistory-usfp.org]
 match = -45.0%%
@@ -42,9 +42,9 @@ title = Recently Added Coins
 url = https://cryptoslate.com/recently-added-coins/
 
 [30rates.com]
-match = -125.0%%
-title = USD to JPY forecast for tomorrow, this week and month.
-url = https://30rates.com/usd-to-jpy-forecast-converter-dollar-to-yen
+match = -120.0%%
+title = USD to MXN forecast for tomorrow, this week and month.
+url = https://30rates.com/usd-to-mxn-today-forecast-dollar-to-mexican-peso
 
 [www.akc.org]
 match = -45.0%%
@@ -424,7 +424,7 @@ url = https://www.outlookindia.com/
 [twitter.com]
 match = -55.0%%
 title = League of Legends (@LeagueOfLegends) / X
-url = https://twitter.com/leagueoflegends
+url = https://twitter.com/leagueoflegends?lang=en
 
 [www.girlsnotbrides.org]
 match = 0.0%%
@@ -515,4 +515,9 @@ url = https://play.google.com/store/apps/details/League_Of_Guessing?id=com.Highl
 match = -60.0%%
 title = Stocks Slump on US Economic Growth Risks
 url = https://www.nasdaq.com/articles/stocks-slump-us-economic-growth-risks
+
+[www.mycouriertribune.com]
+match = -140.0%%
+title = 'Big Brother' Sneak Peek: Kimo Tells Tucker a Key Secret ...
+url = https://www.mycouriertribune.com/lifestyles/entertainment/big-brother-sneak-peek-kimo-tells-tucker-a-key-secret-video/article_1617f93a-04a3-5cec-9c37-a0657008888c.html
 
