--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-08-08 08:05:26
+lastsearch = 2024-08-08 10:52:21
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -354,7 +354,7 @@ url = https://www.elleman.vn/van-hoa-giai-tri/buc-anh-dep-national-geographic-20
 [books.google.com]
 match = -158.8%%
 title = Bradshaw's monthly railway and steam navigation guide
-url = https://books.google.com/books?id=fjsGAAAAQAAJ&pg=RA2-PA41&lpg=RA2-PA41&dq=man+in+hoa+dep+18&source=bl&ots=__nukXVqUz&sig=ACfU3U1ddyTzVQtuWnm0SgAxwMpfAbsN6w&hl=en&sa=X&ved=2ahUKEwjPrv75meSHAxXmlokEHcpgOwEQ6AF6BAgcEAM
+url = https://books.google.com/books?id=fjsGAAAAQAAJ&pg=RA2-PA41&lpg=RA2-PA41&dq=man+in+hoa+dep+18&source=bl&ots=__nukYVqWu&sig=ACfU3U3cfH7YcTA09yEndcx5NDv_AtQPLA&hl=en&sa=X&ved=2ahUKEwjD1rOhv-SHAxUDMVkFHY5XEXwQ6AF6BAgaEAM
 
 [www.bankrate.com]
 match = 0.0%%
@@ -607,9 +607,9 @@ title = Tổng hợp 18 loại hoa cát tường, thu hút tài lộc trong năm
 url = https://www.bachhoaxanh.com/kinh-nghiem-hay/tong-hop-18-loai-hoa-cat-tuong-thu-hut-tai-loc-nen-bay-trong-nha-dip-nam-moi-de-may-man-1318583
 
 [www.facebook.com]
-match = -41.2%%
-title = Thế Giới Hoa Đẹp | Ho Chi Minh City
-url = https://www.facebook.com/The.Gioi.Hoa.Dep.SalePage/
+match = -47.1%%
+title = Loudoun County Sheriff's Office
+url = https://www.facebook.com/LoudounSheriff/
 
 [www.dora.colorado.gov]
 match = -8.3%%
