--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-08-08 08:14:41
+lastsearch = 2024-08-08 10:50:15
 
 [shopee.vn]
-match = 48.0%%
-title = Màn Chụp Tự Bung đỉnh vuông Mùng ...
-url = https://shopee.vn/Màn-Chụp-Tự-Bung-đỉnh-vuông-Mùng-Chụp-Đỉnh-Vuông-viền-trơn-cao-cấp-i.92196959.13058100091
+match = 32.0%%
+title = Màn mùng chụp tự bung đỉnh vuông Mộc Chi
+url = https://shopee.vn/Màn-mùng-chụp-tự-bung-đỉnh-vuông-Mộc-Chi-Mẫu-mùng-chụp-tự-bung-người-lớn-chống-muỗi-gấp-gọn-tiện-dụng-i.308360882.15394517998
 
 [munghoangphat.com]
 match = 48.0%%
@@ -47,9 +47,9 @@ title = Màn chụp đỉnh vuông Cao Cấp EASY DREAM
 url = https://easydream.vn/man-chup-dinh-vuong-31-11.html
 
 [www.lazada.vn]
-match = 4.0%%
-title = Màn đỉnh Vuông Tự Bung Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/man-dinh-vuong-tu-bung/
+match = -36.0%%
+title = Mẫu mùng chụp tự bung người lớn chống muỗi gấp gọn ...
+url = https://www.lazada.vn/products/man-chup-tu-bung-dinh-vuong-dinh-tron-mau-mung-chup-tu-bung-nguoi-lon-chong-muoi-gap-gon-tien-dung-i2219420128.html
 
 [demxanh.com]
 match = 12.0%%
