--- a/images/bo-bon-mua-chun-chan-140x190/config.ini
+++ b/images/bo-bon-mua-chun-chan-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-140x190.html
 lastopen = 2024-06-06 16:45:05
 
 [search]
-lastsearch = 2024-08-08 05:51:45
+lastsearch = 2024-08-08 10:59:47
 
 [www.everonvn.vn]
 match = -50.0%%
@@ -12,14 +12,14 @@ title = Everon EPT20041 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
 url = https://www.everonvn.vn/chi-tiet/Everon-EPT20041.html
 
 [everon.online]
-match = 17.9%%
-title = Bộ Ga Chun Chần Everon Bốn Mùa ...
-url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
+match = -21.4%%
+title = Chăn bốn mùa Everon chính hãng - Giảm giá tốt nhất
+url = https://everon.online/collections/chan-bon-mua-everon
 
 [www.diepxuan.com]
-match = -17.9%%
-title = Bộ chun chần WarmDream 180x200 lụa - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html
+match = 10.7%%
+title = Màn Hồng Hải 140x190 - Điệp Xuân
+url = https://www.diepxuan.com/man-hong-hai-140x190.html
 
 [demxanh.com]
 match = -32.1%%
