--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-08-08 06:47:38
+lastsearch = 2024-08-08 10:44:23
 
 [www.diepxuan.com]
 match = 17.6%%
@@ -19,12 +19,12 @@ url = https://songhongonline.vn/products/bo-san-pham-sh-bc23-082
 [everon.online]
 match = 50.0%%
 title = Bộ Ga Chun Chần Everon Bốn Mùa ...
-url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-chan-everon-moi-nhat
+url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [antbedding.com]
 match = 23.5%%
-title = Bộ Chăn Ga Gối Tencel Hoàng Gia SH07
-url = https://antbedding.com/bo-chan-ga-goi-tencel-hoang-gia-sh07
+title = Bộ Chăn Ga Gối Tencel Hoàng Gia SH08
+url = https://antbedding.com/bo-chan-ga-goi-tencel-hoang-gia-sh08
 
 [shopee.vn]
 match = -2.9%%
@@ -54,7 +54,7 @@ url = https://happynest.vn/shop/EBGCTBM1820EST23035/bo-ga-chun-chan-bon-mua-sac-
 [everon.com.vn]
 match = 15.4%%
 title = Bộ Chăn Ga Everon ESM21013
-url = https://everon.com.vn/bo-chan-ga-everon-esm21013/
+url = https://everon.com.vn/bo-chan-ga-everon-esm21013/?srsltid=AfmBOoqM5h9nBNPEJFyrNdOMAnIpA-zZFueF7o4iPesz-52tsVYZYJqr
 
 [chandrapsaigon.com]
 match = -11.8%%
@@ -84,7 +84,7 @@ url = https://www.everonvni.vn/bo-chan-ga-goi-canh-dong-nang-est24035/
 [aeoneshop.com]
 match = 52.9%%
 title = Bộ Ga Chun Chần Bốn Mùa Everon 180x200cm ESB23022
-url = https://aeoneshop.com/product/25982/bo-ga-chun-chan-bon-mua-180-x-200cm-esb23022
+url = https://aeoneshop.com/product/25982/bo-ga-chun-chan-bon-mua-180-x-200cm-esb23022?srsltid=AfmBOoo5_uNeY4rJjZdKOzmd0hnS3P8Go10_9qfldrkFbr-3BHibfPK8
 
 [tiki.vn]
 match = 41.2%%
@@ -112,9 +112,9 @@ title = Ga gối Sông Hồng basic TC BC24107
 url = https://changagoidemsonghong.online/ga-goi-song-hong-basic-bc24107.html
 
 [everonvn.com.vn]
-match = -23.5%%
-title = Bảng giá bộ chăn ga gối Everon Ep1523 Hàn Quốc màu hoa ...
-url = https://everonvn.com.vn/everon/273/everon-ep-1523
+match = -4.2%%
+title = Bộ Everon Ep1822 - Sheep
+url = https://everonvn.com.vn/everon/623/bo-everon-ep1822?srsltid=AfmBOoq2QmSrXHt1L8vYjz4dn8YdK0e0j4Ks5C5ZCh-UY_z6raY9ilKU
 
 [staging.happynest.com.vn]
 match = -8.8%%
