--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-08-08 06:28:40
+lastsearch = 2024-08-08 10:49:11
 
 [eva.vn]
 match = -163.2%%
@@ -67,14 +67,14 @@ title = 3 loại cây cảnh bỗng dưng nở hoa được xem là kỳ tích
 url = https://danviet.vn/3-loai-cay-canh-bong-dung-no-hoa-duoc-xem-la-ky-tich-bao-hieu-tien-de-ra-tien-20220720162714148.htm
 
 [www.vinmec.com]
-match = -15.8%%
-title = Cây bòng bong chữa bệnh gì?
-url = https://www.vinmec.com/vie/bai-viet/cay-bong-bong-chua-benh-gi-vi
+match = 26.3%%
+title = Công dụng cây bông gạo
+url = https://www.vinmec.com/vie/bai-viet/cong-dung-cay-bong-gao-vi
 
 [www.youtube.com]
-match = -105.3%%
-title = Cách giúp hoa Mộc Hương bền hoa để chơi Tết âm lịch
-url = https://www.youtube.com/watch?v=demL5DzJK5M
+match = -89.5%%
+title = Hoa Mộc Hương ta có cần cắt tỉa tạo tán không?
+url = https://www.youtube.com/watch?v=rDqH9asT7yA
 
 [trungquang.com]
 match = 0.0%%
