--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -283,8 +283,8 @@ url = https://baolongan.vn/dia-chan-lon-nhat-euro-2024-georgia-danh-bai-bo-dao-n
 
 [vietstock.vn]
 match = -218.8%%
-title = Vietstock Daily 08/08/2024: Triển vọng phục hồi chưa rõ ràng
-url = https://vietstock.vn/2024/08/vietstock-daily-08082024-trien-vong-phuc-hoi-chua-ro-rang-1636-1217366.htm
+title = Phân tích kỹ thuật phiên chiều 07/08: Tâm lý thận trọng chi ...
+url = https://vietstock.vn/2024/08/phan-tich-ky-thuat-phien-chieu-0708-tam-ly-than-trong-chi-phoi-thi-truong-585-1217148.htm
 
 [baohungyen.vn]
 match = -200.0%%
