--- a/images/chieu-truc-thai-den-160x200/config.ini
+++ b/images/chieu-truc-thai-den-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 lastopen = 2024-06-30 02:08:23
 
 [search]
-lastsearch = 2024-08-08 09:09:37
+lastsearch = 2024-08-08 10:57:16
 
 [demxanh.com]
 match = 37.0%%
@@ -14,7 +14,7 @@ url = https://demxanh.com/chieu-truc-den.html
 [demre.com.vn]
 match = 66.7%%
 title = chiếu trúc hạt đen- trắng 160x200
-url = https://demre.com.vn/chieu-truc-hat-den-trang-160x200
+url = https://demre.com.vn/chieu-truc-hat-den-trang-160x200-2
 
 [sieuthitretho.vn]
 match = 3.7%%
@@ -42,14 +42,14 @@ title = BẢNG GIÁ Chiếu Trúc Việt Nam mới nhất ...
 url = https://thegioidemviet.vn/chieu-truc/
 
 [www.diepxuan.com]
-match = 11.1%%
-title = Điệp Xuân Chiếu trúc trung quốc
-url = https://www.diepxuan.com/chieu-truc/chieu-truc-trung-quoc.html
+match = 63.0%%
+title = Điệp Xuân Chiếu trúc Thái đen 160x200
+url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 
 [shopee.vn]
-match = -48.1%%
-title = Chiếu Tre Việt Phổ Mến Thái Bình 100%% made in Việt Nam ...
-url = https://shopee.vn/Chiếu-Tre-Việt-Phổ-Mến-Thái-Bình-100-made-in-Việt-Nam-đan-thủ-công-chắc-chắn-i.334752746.9933777878
+match = -18.5%%
+title = Chiếu tre gấp vân gỗ Thái Lan 200x220| 180x200| 160x200
+url = https://shopee.vn/Chiếu-tre-gấp-vân-gỗ-Thái-Lan-200x220-180x200-160x200-i.334752746.7193995503
 
 [tiki.vn]
 match = -7.4%%
