--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-08-08 06:31:46
+lastsearch = 2024-08-08 10:52:44
 
 [burningman.org]
 match = 0.0%%
@@ -29,7 +29,7 @@ url = http://desaulnier.house.gov/
 [account.microsoft.com]
 match = -200.0%%
 title = Microsoft account | Sign In or Create Your Account Today
-url = https://account.microsoft.com/account
+url = https://account.microsoft.com/account/manage-my-account
 
 [www.regmovies.com]
 match = -113.3%%
@@ -307,9 +307,9 @@ title = 10 plus! - Review of Tokia Hotel & Spa, Nha Trang, Vietnam
 url = https://www.tripadvisor.com/ShowUserReviews-g293928-d13388287-r887068402-Tokia_Hotel_Spa-Nha_Trang_Khanh_Hoa_Province.html
 
 [en.wikipedia.org]
-match = 0.0%%
-title = 
-url = https://en.wikipedia.org/wiki/Burning_Man
+match = 10.0%%
+title = Thuy Trang
+url = https://en.wikipedia.org/wiki/Thuy_Trang
 
 [status.epicgames.com]
 match = -33.3%%
