--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-08-08 04:19:19
+lastsearch = 2024-08-08 10:54:49
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -14,7 +14,7 @@ url = https://www.sieuthinem.com/ct-san-pham/273/nem-cao-su-thien-nhien-everhome
 [demxanh.com]
 match = -14.3%%
 title = Đệm bông ép Everhome 2m giá bao nhiêu?
-url = https://demxanh.com/dem-bong-ep-everhome-2m-gia-bao-nhieu.html?srsltid=AfmBOooQ-XbvbJ30rIDpSFyvszsNty2lIwqtpyh2dhtFWAFOdi2BgE4d
+url = https://demxanh.com/dem-bong-ep-everhome-2m-gia-bao-nhieu.html
 
 [www.ebay.com]
 match = -100.0%%
@@ -39,7 +39,7 @@ url = https://thegioidemviet.vn/dem-bong-ep/
 [www.diepxuan.com]
 match = 23.8%%
 title = Nệm everhome TC 15F 16 20 - Điệp Xuân
-url = https://www.diepxuan.com/nem-everhome-tc-15f-16-20.html?srsltid=AfmBOorakAgs8lMXpJe9Dyh6FAdUSRVu5UuvjCxedBKzPVIK3O6kkLu4
+url = https://www.diepxuan.com/nem-everhome-tc-15f-16-20.html
 
 [bachhoadem.vn]
 match = 28.6%%
@@ -54,7 +54,7 @@ url = https://demsingapore.com/dem-bong-ep-everhome-vo-tc.html
 [demviethome.vn]
 match = -52.4%%
 title = Tổng kho đệm bông ép chính hãng tại Hà Nội
-url = https://demviethome.vn/dem-bong-ep/?srsltid=AfmBOoqFAflW6OoY5F6Xarv57O_3mkQw47kb4gdTPRxNlhA2iEKcTar-
+url = https://demviethome.vn/dem-bong-ep/
 
 [www.tiktok.com]
 match = -95.2%%
