--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-08-08 05:13:19
+lastsearch = 2024-08-08 10:59:03
 
 [www.lazada.vn]
 match = -61.1%%
@@ -12,9 +12,9 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -88.9%%
-title = Chuchu Shop - 𝐍𝐄𝐌 𝐂𝐇𝐔𝐀 𝐕𝐈𝐄̂𝐍 𝐌𝐈𝐍𝐈 𝐎̛́𝐓 𝐗𝐈𝐄̂𝐌 ...
-url = https://www.facebook.com/story.php/?story_fbid=883178550515220&id=100064692486421
+match = -5.6%%
+title = Nem Nướng Mỗ Lao - Hà Đông
+url = https://www.facebook.com/story.php/?story_fbid=767320398760395&id=100064473260604
 
 [thegioinem.com]
 match = -55.6%%
@@ -47,9 +47,9 @@ title = Nem rán Việt Nam được ca ngợi là món ăn nhẹ ngon nhất ..
 url = https://vietnamnet.vn/nem-ran-viet-nam-duoc-ca-ngoi-la-mon-an-nhe-ngon-nhat-the-gioi-2149178.html
 
 [www.tiktok.com]
-match = -155.6%%
-title = Hướng Dẫn Cách Đánh Cú Ném Biên Siêu Cấp #clashofclans ...
-url = https://www.tiktok.com/@akarigaming66/video/7366906266075106576?lang=en
+match = -77.8%%
+title = How Long to Cook Nem Nuong in Air Fryer
+url = https://www.tiktok.com/discover/how-long-to-cook-nem-nuong-in-air-fryer
 
 [www.diepxuan.com]
 match = 11.1%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Nệm siêu nhẹ
 url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [m.facebook.com]
-match = -88.9%%
-title = Ăn Ngon Bà rịa | NEM CHUA RÁN THỊT NGON SỐ 1
-url = https://m.facebook.com/groups/2222988021289951/posts/3638906849698054/
+match = -133.3%%
+title = Người Việt Bolsa/Orange County | 💥Nem Nướng Nha Trang
+url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2888077278009303/
 
 [emartmall.com.vn]
 match = 0.0%%
