--- a/images/tham-ni-xop-go-60/config.ini
+++ b/images/tham-ni-xop-go-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 lastopen = 2024-06-07 00:35:25
 
 [search]
-lastsearch = 2024-08-08 08:01:16
+lastsearch = 2024-08-08 11:01:09
 
 [xoptraisan.info]
 match = -170.6%%
@@ -34,7 +34,7 @@ url = https://lombom.com/tham-ni-ghep-san-nha/
 [trieuchau.com]
 match = -129.4%%
 title = Thảm Trải Lót Sàn, Sàn Nhựa Giả Gỗ, Thảm Nhựa TPHCM
-url = https://trieuchau.com/vi-vn/1053/Trang-Chu/Trang-1
+url = https://trieuchau.com/
 
 [www.facebook.com]
 match = 0.0%%
