--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-08-08 05:40:51
+lastsearch = 2024-08-08 11:34:03
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -42,9 +42,9 @@ title = KẾT QUẢ CHỌN TẠO GIỐNG LẠC CHỊU MẶN LDH.09 ...
 url = https://asisov.org.vn/cay-thuc-pham/ket-qua-chon-tao-giong-lac-chiu-man-ldh-09-cho-vung-duyen-hai-nam-trung-bo-400.html
 
 [shopee.vn]
-match = -43.8%%
-title = Chiếu lác màu xuất khẩu bao dày đẹp
-url = https://shopee.vn/Chiếu-lác-màu-xuất-khẩu-bao-dày-đẹp-i.821808889.16482308101
+match = 0.0%%
+title = Chiếu Lác Nhựa Mát Mẻ Bền Đẹp
+url = https://shopee.vn/Chiếu-Lác-Nhựa-Mát-Mẻ-Bền-Đẹp-i.58697470.5071220147
 
 [www.thegioididong.com]
 match = -193.8%%
@@ -312,9 +312,9 @@ title = Con đường cuối của 'trùm' ma túy Vũ Văn Đảng
 url = https://baonghean.vn/con-duong-cuoi-cua-trum-ma-tuy-vu-van-dang-10275067.html
 
 [olm.vn]
-match = -212.5%%
-title = Một mảnh đất hình thang có đáy lớn 27,6m, đáy bé bằng 2 ...
-url = https://olm.vn/cau-hoi/mot-manh-dat-hinh-thang-co-day-lon-276m-day-be-bang-23-day-lon-chieu-cao-85m-nguoi-ta-trong-lac-tren-manh-dat-do-cu-1m-vuong-thu-duoc-3kg-lac-c.68946291283
+match = -193.8%%
+title = Một con lắc đơn chiều dài l = 1,8m, một đầu gắn với vật ...
+url = https://olm.vn/hoi-dap/tim-kiem?id=287400362122&q=Một con lắc đơn chiều dài l = 1,8m, một đầu gắn với vật khối lượng 200g. Thẳng phía dưới điểm treo cách điểm treo một đoạn l 2 có một cái đinh. Kéo vật ra khỏi vị trí cân bằng sao ch...
 
 [mizunoforum.com]
 match = -55.6%%
