CI images update

--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-08 06:30:03
+lastsearch = 2024-08-08 11:18:45
 
 [batdongsan.com.vn]
 match = -240.0%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Chiếu lác D2 08
 url = https://www.diepxuan.com/chieu-lac-d2-08.html
 
 [www.facebook.com]
-match = -240.0%%
-title = HOT&COLD D2 Toạ lạc tại:... - Hot Cold - Trà sữa & Xiên Que
-url = https://www.facebook.com/trasuaxienque/posts/hotcold-d2toạ-lạc-tại-32-đường-d2-phường-25-q-bình-thạnh-tp-hồ-chí-minhhotline-g/1200627010039097/
+match = -66.7%%
+title = Baïeta - Cocktails & Chic tapas
+url = https://www.facebook.com/baietasaigon.restaurant/
 
 [lacvietauction.vn]
 match = -80.0%%
@@ -309,7 +309,7 @@ url = https://diaoc24gio.com/du-an/quan-2-khu-dan-cu-d2-eight-capital-land
 [concung.com]
 match = -220.0%%
 title = Ba lô chống lạc bé gái Princess DHF19017-D2 (Hồng) giá tốt
-url = https://concung.com/thoi-trang-tre-em/ba-lo-chong-lac-be-gai-princess-dhf19017-d2-hong-61528.html?srsltid=AfmBOorXk01HqytTRurZr33qRSEggUaKmuRnP7WL2oPpQSfZ_DTJ0yAV
+url = https://concung.com/thoi-trang-tre-em/ba-lo-chong-lac-be-gai-princess-dhf19017-d2-hong-61528.html
 
 [tuyensinh247.com]
 match = -220.0%%
