--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-08-08 06:44:08
+lastsearch = 2024-08-08 11:17:21
 
 [www.diepxuan.com]
 match = 40.9%%
@@ -97,8 +97,8 @@ title = Thảm trải sàn phòng ngủ chính hãng, giá tốt
 url = https://flexhouse.vn/tham-trai-san-phong-ngu
 
 [decosy.com]
-match = -50.0%%
-title = Furniture & Decoration - Decosy Vietnam
+match = 4.5%%
+title = Furniture & Decoration
 url = https://decosy.com/vi_VN/shop/category/phong-ngu-giuong-1167
 
 [maybedding.vn]
@@ -107,9 +107,9 @@ title = Thảm giường massage cotton hữu cơ Maybedding
 url = https://maybedding.vn/products/tham-giuong-massage-cotton-huu-co-maybedding
 
 [dovihome.vn]
-match = -122.7%%
-title = Giường ngủ Decor có tựa đầu tối giản làm từ gỗ thông ...
-url = https://dovihome.vn/giuong-ma-dv10-giuong-ngu-decor-co-tua-dau-toi-gian-lam-tu-go-thong-nhap-khau
+match = -118.2%%
+title = Giường ngủ Decor có tựa đầu bọc nệm Sofa phong cách ...
+url = https://dovihome.vn/giuong-bay-ma-m30-giuong-ngu-decor-co-tua-dau-boc-nem-sofa-phong-cach-toi-gian
 
 [covacu.com]
 match = 28.6%%
@@ -127,9 +127,9 @@ title = Pin by Alesha Faicco on Desks - bedroom
 url = https://www.pinterest.com/pin/pin-von-alesha-faicco-auf-desks-bedroom--565483296932165432/
 
 [tonybed.com]
-match = -4.5%%
-title = Bộ Drap Ga Trải Giường Modal - 21
-url = https://tonybed.com/bo-drap-ga-trai-giuong-modal-21/
+match = -40.0%%
+title = Đầu giường
+url = https://tonybed.com/dau-giuong/
 
 [dongagroup.vn]
 match = -100.0%%
