--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-08-08 10:37:47
+lastsearch = 2024-08-08 11:31:53
 
 [tiki.vn]
 match = -138.9%%
@@ -32,9 +32,9 @@ title = Giường 160x200 – Chổi Xể - Nội Thất Giá Rẻ Xuất Âu
 url = https://choixe.vn/collections/giuong-160x200
 
 [nemkimtrang.com]
-match = -150.0%%
-title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 705 - CHÍNH HÃNG ...
-url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-705-chinh-hang-cao-cap
+match = -105.6%%
+title = Bộ Ga (Drap) Nệm Cotton Solid Edena Mẫu 358
+url = https://nemkimtrang.com/bo-ga-drap-nem-cotton-solid-edena-mau-358-chinh-hang-cao-cap
 
 [demxanh.com]
 match = -72.2%%
@@ -49,7 +49,7 @@ url = https://foreverbedding.net/bo-ga-phu-common-c104
 [aeoneshop.com]
 match = -105.6%%
 title = Bộ Chăn Ga Gối Làm Mát Gấu Hóme Cóordy SS24 ...
-url = https://aeoneshop.com/product/29675/bo-chan-ga-goi-lam-mat-gau-ss24-160x200-mau-xam?srsltid=AfmBOoqxzZvlO5omJ7BSiGYn0KQm9lku871RwuMaR2DM1uqZqoXU8aEz
+url = https://aeoneshop.com/product/29675/bo-chan-ga-goi-lam-mat-gau-ss24-160x200-mau-xam
 
 [everonvn.com.vn]
 match = -105.6%%
@@ -94,7 +94,7 @@ url = https://edena.vn/
 [demviethome.vn]
 match = 16.7%%
 title = Bộ Phủ L'amour Living LV10
-url = https://demviethome.vn/bo-phu-lamour-living-lv10/?srsltid=AfmBOor8mHvPEiChnpyrkvUeIiokFzwGHE0HPjvfhRWZ1tWx0HL6gRL6
+url = https://demviethome.vn/bo-phu-lamour-living-lv10/
 
 [leflair.com]
 match = -61.1%%
@@ -139,7 +139,7 @@ url = https://www.facebook.com/fitin.vn/
 [www.diepxuan.com]
 match = -38.9%%
 title = Bộ ga phủ WarmDream 160x200 HQ - Điệp Xuân
-url = https://www.diepxuan.com/bo-ga-phu-warmdream-160x200-hq.html?srsltid=AfmBOopD505CyJ18sdDsLZCA9_w1ps7uR-COkqnuxlQboHC9qAJQ9YKx
+url = https://www.diepxuan.com/bo-ga-phu-warmdream-160x200-hq.html
 
 [dovihome.vn]
 match = 0.0%%
