--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-08-08 08:01:56
+lastsearch = 2024-08-08 11:21:33
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -12,9 +12,9 @@ title = Chiếu cây Đài Loan 140x190
 url = https://www.diepxuan.com/chieu-cay-dai-loan-140x190.html
 
 [www.vinmec.com]
-match = 0.0%%
-title = Chiếu đèn vàng da 15 phút có hiệu quả không?
-url = https://www.vinmec.com/vie/bai-viet/chieu-den-vang-da-15-phut-co-hieu-qua-khong-vi
+match = -17.9%%
+title = Trẻ bị vàng da chiếu đèn như nào mới hiệu quả?
+url = https://www.vinmec.com/vie/bai-viet/tre-bi-vang-da-chieu-den-nhu-nao-moi-hieu-qua-vi
 
 [www.hotdeal.vn]
 match = -25.0%%
@@ -27,9 +27,9 @@ title = Đổi Màu Nội Thất Mercedes GLC Đỏ Đen Da Bò Xịn Italy Hà 
 url = https://www.youtube.com/watch?v=6okPdN0a338
 
 [m.facebook.com]
-match = -71.4%%
-title = Việc làm spa uy tín ✅ | 👉500k,600k700k....../1lít serum ...
-url = https://m.facebook.com/groups/263939630749643/posts/1929234707553452/
+match = 0.0%%
+title = Chợ Mua Bán Bù Đốp
+url = https://m.facebook.com/groups/625079281427355/permalink/1551560102112597/
 
 [www.dkn.tv]
 match = -21.4%%
