--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-08-08 02:53:10
+lastsearch = 2024-08-08 11:23:14
 
 [vinatools.com]
 match = -140.0%%
 title = Kéo cắt tôn dày 1.0mm kiểu dáng cổ điển Bessey
-url = https://vinatools.com/keo-cat-ton-d-216-116/?srsltid=AfmBOopNEbkKozoY_aSEt1Suu2jC19o8oMIWaS8bMMEdLw2kJ03VVnoc
+url = https://vinatools.com/keo-cat-ton-d-216-116/
 
 [www.vietnamairport.vn]
 match = -213.3%%
@@ -47,9 +47,9 @@ title = Cowon D2 gia nhập 'câu lạc bộ 16 GB'
 url = https://vnexpress.net/cowon-d2-gia-nhap-cau-lac-bo-16-gb-1500501.html
 
 [www.facebook.com]
-match = -213.3%%
-title = Black Kingdom - D2 - CÔNG BỐ GIẢI ĐẤU OFFLINE MANG ...
-url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=vi_VN
+match = -186.7%%
+title = Ways Station Gaming - Ngày mai 7/3 chi nhánh 16 ...
+url = https://www.facebook.com/photo.php?fbid=1220848438345777&id=139181649845800&set=a.179106562519975
 
 [banhang.shopee.vn]
 match = -66.7%%
@@ -182,9 +182,9 @@ title = [NGẪU NHIÊN] Dụng cụ nhảy dây có đếm số vòng D216
 url = https://www.lazada.vn/products/ngau-nhien-dung-cu-nhay-day-co-dem-so-vong-d216-rikob-shop-i2433883429.html
 
 [shopee.vn]
-match = -226.7%%
-title = Que hàn sắt KOBE-16 D2.6 - 3.2 - 4.0 - 5.0 ( Thái Lan )
-url = https://shopee.vn/product/686340132/24951807725
+match = -240.0%%
+title = Đầu lắc xi lanh FJ - Khớp nối đầu lắc các cỡ M5,6,8,10,12, ...
+url = https://shopee.vn/Đầu-lắc-xi-lanh-FJ-Khớp-nối-đầu-lắc-các-cỡ-M5-6-8-10-12-14-16-18-20-27-(chính-hãng-SNS)-i.1096166656.24605536524
 
 [www.ministop.vn]
 match = -26.7%%
@@ -355,4 +355,9 @@ url = https://mdee-ain.eu/eebnw/vi/câu-lạc-bộ-quay-sw-calgary
 match = 13.3%%
 title = Máy chiếu DLP®
 url = https://www.optomaeurope.com/ContentStorage/Documents/b2b0b38f-8765-4d0c-8a50-52c7b3b74a5e.pdf
+
+[masterisehomes.com]
+match = -180.0%%
+title = Không gian sống tinh tế, chan hòa cùng thiên nhiên
+url = https://masterisehomes.com/lumiere-boulevard/vn/project
 
