--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-08-08 09:21:29
+lastsearch = 2024-08-08 11:30:52
 
 [scholar.google.com]
 match = -43.8%%
@@ -87,9 +87,9 @@ title = Gần 50 nữ streamer làm nội dung 18+, khiêu dâm phải trả ...
 url = https://gamek.vn/gan-50-nu-streamer-lam-noi-dung-18-khieu-dam-phai-tra-gia-dat-178240804170152042.chn
 
 [www.google.com]
-match = -112.5%%
-title = maps/@21.001139,105.847882,17z?hl=vi
-url = https://www.google.com/maps/@21.001139,105.847882,17z?hl=vi
+match = -200.0%%
+title = https://www.google.com/maps/@21.0506866,105.804746...
+url = https://www.google.com/maps/@21.0506866,105.8047464,19z?hl=vi
 
 [www.facebook.com]
 match = -81.2%%
@@ -372,9 +372,9 @@ title = Size Guide
 url = https://pandora.norbreeze.vn/pages/size-guide-1
 
 [m.facebook.com]
-match = -50.0%%
-title = Bệnh viện đa khoa tỉnh Nam Định
-url = https://m.facebook.com/story.php/?story_fbid=1020964360035271&id=100063651485655
+match = -175.0%%
+title = HR - TUYỂN DỤNG | _________ SG29 STORE_________ ...
+url = https://m.facebook.com/groups/hrtuyendungcnns/posts/8438022996221673/
 
 [shopee.vn]
 match = -75.0%%
@@ -652,9 +652,9 @@ title = Tin nóng an ninh trật tự 24h - Báo Công An Thành Phố Hồ Chí
 url = https://congan.com.vn/
 
 [baolaocai.vn]
-match = -143.8%%
-title = Điểm tin trong tuần từ ngày 22/7 đến ngày 28/7
-url = https://baolaocai.vn/diem-tin-trong-tuan-tu-ngay-227-den-ngay-287-post387658.html
+match = -200.0%%
+title = Khởi tố 18 bị can trong vụ đánh bạc liên quan cựu Phó ...
+url = https://baolaocai.vn/khoi-to-18-bi-can-trong-vu-danh-bac-lien-quan-cuu-pho-chu-tich-ubnd-tinh-phu-tho-post388173.html
 
 [lambinh.tuyenquang.gov.vn]
 match = -187.5%%
@@ -825,4 +825,19 @@ url = https://yenson.tuyenquang.gov.vn/vi/tin-bai/chieu-yen-tru-phu?type=NEWS&id
 match = -200.0%%
 title = Khởi tố 18 bị can trong vụ đánh bạc liên quan cựu Phó ...
 url = http://antt.vn/khoi-to-18-bi-can-trong-vu-danh-bac-lien-quan-cuu-pho-chu-tich-ubnd-tinh-phu-tho-388693.htm
+
+[www.baoyenbai.com.vn]
+match = -212.5%%
+title = Hãng hàng không đầu tiên trên thế giới cho phép phụ nữ ...
+url = https://www.baoyenbai.com.vn/18/326787/Hang-hang-khong-dau-tien-tren-the-gioi-cho-phep-phu-nu-tranh-ngoi-canh-nam-gioi.aspx
+
+[teamlanhlung.blog]
+match = -93.8%%
+title = Team Lạnh Lùng – Truyện Tranh Online
+url = https://teamlanhlung.blog/
+
+[baobacgiang.vn]
+match = 0.0%%
+title = Để thành phố đẹp hơn
+url = https://baobacgiang.vn/bg2/tp-bac-giang/de-thanh-pho-dep-hon-071417.bbg
 
