--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-08-08 10:14:06
+lastsearch = 2024-08-08 11:22:13
 
 [www.reddit.com]
-match = -82.6%%
-title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
-url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
+match = -104.3%%
+title = Riot is cutting back budget on esports? : r/leagueoflegends
+url = https://www.reddit.com/r/leagueoflegends/comments/9aqbes/riot_is_cutting_back_budget_on_esports/
 
 [en.wikipedia.org]
 match = -58.3%%
@@ -52,9 +52,9 @@ title = N. KOREAN PATROL BOATS SEIZE U.S. SPY SHIP WITH ...
 url = https://www.cia.gov/readingroom/document/06638269
 
 [www.instagram.com]
-match = -91.3%%
-title = Boozy kirsch soaked cherry, cacao nibs, chocolate ...
-url = https://www.instagram.com/p/BM7bH3EDUMB/?hl=hu
+match = 0.0%%
+title = 
+url = https://www.instagram.com/lol_nemesis/
 
 [wanderingchopsticks.blogspot.com]
 match = -43.5%%
