--- a/images/tui-singapore14/config.ini
+++ b/images/tui-singapore14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tui-singapore14.html
 lastopen = 2024-06-17 10:45:32
 
 [search]
-lastsearch = 2024-08-08 10:18:52
+lastsearch = 2024-08-08 11:22:32
 
 [www.tui.co.uk]
 match = -160.0%%
-title = Where We Fly | Flights with TUI 2024 / 2025
-url = https://www.tui.co.uk/flight/where-we-fly
+title = Marella Cruises | Cruise Holidays 2024 / 2025
+url = https://www.tui.co.uk/cruise/
 
 [cruisepanda.com]
 match = -213.3%%
 title = 14 Night Asia Cruise On Mein Schiff 5 Departing From ...
-url = https://cruisepanda.com/cruise-deals/14-night-asia-cruise-on-mein-schiff-5-departing-from-singapore-184
+url = https://cruisepanda.com/cruise-deals/14-night-asia-cruise-on-mein-schiff-5-departing-from-singapore-135
 
 [www.changiairport.com]
 match = -213.3%%
@@ -180,4 +180,9 @@ url = https://boards.cruisecritic.com/topic/2965866-fascinating-far-east-2/
 match = -213.3%%
 title = First-class trip on Singapore Airlines sparks debate online
 url = https://uk.news.yahoo.com/first-class-trip-singapore-airlines-201808457.html
+
+[www.oneworld.com]
+match = -200.0%%
+title = oneworld Members: Airlines In The oneworld Alliance
+url = https://www.oneworld.com/members
 
