CI images update

--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-08-08 10:42:40
+lastsearch = 2024-08-08 11:48:27
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -67,9 +67,9 @@ title = Ấn phẩm Tết Giáp Thìn dự thi giải Sách Quốc gia
 url = https://vnexpress.net/an-pham-tet-giap-thin-du-thi-giai-sach-quoc-gia-4776663.html
 
 [laodong.vn]
-match = -187.5%%
-title = Cụ ông 82 tuổi đi xe máy tử vong sau tai nạn với xe tải
-url = https://laodong.vn/xa-hoi/cu-ong-82-tuoi-di-xe-may-tu-vong-sau-tai-nan-voi-xe-tai-1366911.ldo
+match = -106.2%%
+title = Mùa giải V.League 2024-2025 có gì hấp dẫn?
+url = https://laodong.vn/bong-da/mua-giai-vleague-2024-2025-co-gi-hap-dan-1377645.ldo
 
 [olm.vn]
 match = -143.8%%
@@ -720,4 +720,9 @@ url = https://nbtv.vn/ninh-binh-bat-cac-vu-an-ve-mua-ban-va-to-chuc-su-dung-trai
 match = -225.0%%
 title = Umpire Ryan Wills called a ball on a pitch that should've ...
 url = https://www.tiktok.com/@umpireauditor/video/7399220230809046303
+
+[kontumcity.kontum.gov.vn]
+match = -125.0%%
+title = xôi lạc 5 tv🔌 【WW88.game】 sòng bạc an toàn
+url = https://kontumcity.kontum.gov.vn/bmw77519318/
 
