--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-08-08 10:01:28
+lastsearch = 2024-08-08 11:54:20
 
 [www.lazada.vn]
 match = -27.8%%
@@ -14,7 +14,7 @@ url = https://www.lazada.vn/tag/vo-goi-50x70-trang/
 [ru9.vn]
 match = -38.9%%
 title = Bật Mí: Vỏ Gối Khách Sạn Dùng Loại Gì?
-url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi
+url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi?srsltid=AfmBOopqfbVUnQy6GBao6Ehk-Dxrj1gyBYtnwc9qG4jWQHvmgg4-q3w9
 
 [www.diepxuan.com]
 match = -55.6%%
@@ -49,7 +49,7 @@ url = {search_url}
 [ninhouse.vn]
 match = 43.8%%
 title = Vỏ gối khách sạn
-url = https://ninhouse.vn/products/vo-goi-khach-san
+url = https://ninhouse.vn/products/vo-goi-khach-san?srsltid=AfmBOooT7d5NIpyw6x-U5s8Ur4SH4pOIAJGZFi6A7f_7PeQsBFK1PVsN
 
 [tonybed.vn]
 match = 22.2%%
@@ -89,7 +89,7 @@ url = https://thegioidemviet.vn/vo-goi-khach-san/
 [demxanh.com]
 match = -155.6%%
 title = Chuyên các sản phẩm vỏ gối chính hãng giá rẻ nhất Hà Nội
-url = https://demxanh.com/vo-goi.html
+url = https://demxanh.com/vo-goi.html?srsltid=AfmBOoq8iFLVXHWqGrTSq8tOH5m3OVDJDlfLSZZaPFX_Q75x7-Nvhh-l
 
 [templeshalom.ca]
 match = 0.0%%
