--- a/images/bo-ga-goi-chun-chan-happy-16/config.ini
+++ b/images/bo-ga-goi-chun-chan-happy-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 lastopen = 2024-06-06 16:51:08
 
 [search]
-lastsearch = 2024-08-08 11:25:41
+lastsearch = 2024-08-08 11:51:34
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -72,9 +72,9 @@ title = Bộ chăn ga gối Sông Hồng dòng Basic mã mầu BC16
 url = https://changagoidemsonghong.com/chan-ga-goi-bc16
 
 [m.facebook.com]
-match = -10.7%%
-title = Happy Bedding - Chăn Ga Gối Nệm | Djrott
-url = https://m.facebook.com/61557923567720
+match = 21.4%%
+title = Món Ngon Người Việt Houston | Happy 4th
+url = https://m.facebook.com/groups/monngonnvh/posts/26322161394041841/
 
 [sieuthidemonline.vn]
 match = 0.0%%
