--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-08-08 10:17:49
+lastsearch = 2024-08-08 11:57:34
 
 [hanvico.com.vn]
 match = 38.1%%
@@ -13,8 +13,8 @@ url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv18/
 
 [foreverbedding.net]
 match = -33.3%%
-title = Bộ ga chun Silky G121 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-silky-g121
+title = Bộ ga chun Velina V18 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-chun-velina-v18
 
 [shopee.vn]
 match = -114.3%%
