--- a/images/chieu-truc-cong-ty-16-20/config.ini
+++ b/images/chieu-truc-cong-ty-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-20.html
 lastopen = 2024-06-09 23:50:30
 
 [search]
-lastsearch = 2024-08-08 11:17:42
+lastsearch = 2024-08-08 11:57:55
 
 [chieutrelanlan.com]
 match = -16.7%%
@@ -79,7 +79,7 @@ url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-vo-gam.html
 [demxanh.com]
 match = 25.0%%
 title = Chiếu trúc hạt Hương Trúc nâu cà phê
-url = https://demxanh.com/chieu-truc-hat-huong-truc-nau.html?srsltid=AfmBOoquofpx802iOTos8MrN22tDuf_w35asRo9aQf6-ReG-BWh65o9a
+url = https://demxanh.com/chieu-truc-hat-huong-truc-nau.html
 
 [www.diepxuan.com]
 match = 100.0%%
