--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-08-08 10:41:38
+lastsearch = 2024-08-08 12:01:45
 
 [www.diepxuan.com]
-match = 25.0%%
-title = Ga chun EPCARLESS 180x200 - Điệp Xuân
+match = 17.9%%
+title = Điệp Xuân Ga chun EPCARLESS 180x200
 url = https://www.diepxuan.com/ga-chun-epcarless-180x200.html
 
 [www.qcyc.ca]
