--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-08-08 10:52:21
+lastsearch = 2024-08-08 12:01:01
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -354,7 +354,7 @@ url = https://www.elleman.vn/van-hoa-giai-tri/buc-anh-dep-national-geographic-20
 [books.google.com]
 match = -158.8%%
 title = Bradshaw's monthly railway and steam navigation guide
-url = https://books.google.com/books?id=fjsGAAAAQAAJ&pg=RA2-PA41&lpg=RA2-PA41&dq=man+in+hoa+dep+18&source=bl&ots=__nukYVqWu&sig=ACfU3U3cfH7YcTA09yEndcx5NDv_AtQPLA&hl=en&sa=X&ved=2ahUKEwjD1rOhv-SHAxUDMVkFHY5XEXwQ6AF6BAgaEAM
+url = https://books.google.com/books?id=fjsGAAAAQAAJ&pg=RA2-PA41&lpg=RA2-PA41&dq=man+in+hoa+dep+18&source=bl&ots=__nukZPrYu&sig=ACfU3U2WBPeTNAeJoohlI9nDhawhPzrbCw&hl=en&sa=X&ved=2ahUKEwiIrprOzuSHAxVSEFkFHX8oAvcQ6AF6BAgaEAM
 
 [www.bankrate.com]
 match = 0.0%%
@@ -655,4 +655,9 @@ url = https://doi.colorado.gov/
 match = -70.6%%
 title = | Washington State Department of Health
 url = https://doh.wa.gov/
+
+[www.experian.com]
+match = 0.0%%
+title = 
+url = https://www.experian.com/blogs/ask-experian/how-to-opt-out-of-hoa/
 
