--- a/images/tham-giuong-bode-150x190/config.ini
+++ b/images/tham-giuong-bode-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bode-150x190.html
 lastopen = 2024-06-17 17:46:25
 
 [search]
-lastsearch = 2024-08-08 05:20:34
+lastsearch = 2024-08-08 11:56:52
 
 [www.diepxuan.com]
 match = 37.5%%
 title = Thảm giường Bode 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
+url = https://www.diepxuan.com/tham-giuong-bode-160x200.html?srsltid=AfmBOooAjEMVxA9_DjqCD-x02PSPcMVcBI30lzPSuj_f2dEABC_fn9Wa
 
 [www.tripadvisor.com]
 match = -112.5%%
