--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-08-08 11:48:27
+lastsearch = 2024-08-08 12:19:50
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -12,9 +12,9 @@ title = Chiếu lác
 url = https://www.diepxuan.com/chieu/chieu-lac.html?p=2
 
 [shopee.vn]
-match = 73.3%%
-title = Chiếu lác em bé
-url = https://shopee.vn/Chiếu-lác-em-bé-i.298458938.4550748407
+match = -18.8%%
+title = Chiếu lác thiên nhiên : 1m6 .1m8
+url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
 match = -162.5%%
@@ -102,9 +102,9 @@ title = PG-1
 url = https://yamaha-motor.com.vn/xe/pg-1-bns1/
 
 [tuoitre.vn]
-match = -206.2%%
-title = Sở Y tế vào cuộc vụ bé gái rơi nứt sọ tại cơ sở tiêm chủng
-url = https://tuoitre.vn/so-y-te-vao-cuoc-vu-be-gai-roi-nut-so-tai-co-so-tiem-chung-20240807163506038.htm
+match = -200.0%%
+title = Bộ trưởng Bộ Ngoại giao Bùi Thanh Sơn: Việt Nam luôn ...
+url = https://tuoitre.vn/bo-truong-ngoai-giao-bui-thanh-son-viet-nam-luon-coi-asean-la-ngoi-nha-chung-20240808094835107.htm
 
 [www.apple.com]
 match = 0.0%%
@@ -152,9 +152,9 @@ title = lịch thi đấu sea games 32 ngày 16 tháng 05
 url = https://caodangtkv.edu.vn/Xsn/20240615-77kfuhesoi kèo tài xỉu việt nam malaysia.html
 
 [www.facebook.com]
-match = -8.3%%
-title = Mai Thanh Hạ
-url = https://www.facebook.com/maithanhha19/
+match = -218.8%%
+title = Đúng là may mắn, chuẩn bị nhận xe #VF3 thì #Vingroup dí ...
+url = https://www.facebook.com/dqmtrieu/photos/đúng-là-may-mắn-chuẩn-bị-nhận-xe-vf3-thì-vingroup-dí-cho-cái-thẻ-vinclub-hạng-di/1043412684455571/
 
 [suckhoedoisong.vn]
 match = -225.0%%
@@ -725,4 +725,9 @@ url = https://www.tiktok.com/@umpireauditor/video/7399220230809046303
 match = -125.0%%
 title = xôi lạc 5 tv🔌 【WW88.game】 sòng bạc an toàn
 url = https://kontumcity.kontum.gov.vn/bmw77519318/
+
+[baolangson.vn]
+match = -231.2%%
+title = Audi Q3 Advance có giá từ 1,89 tỉ tại Việt Nam, thêm phiên ...
+url = https://baolangson.vn/audi-q3-advance-co-gia-tu-1-89-ti-tai-viet-nam-them-phien-ban-den-ca-tinh-5017698.html
 
