--- a/images/bo-ga-chun-chan-lua-warmdream-140x190-hq/config.ini
+++ b/images/bo-ga-chun-chan-lua-warmdream-140x190-hq/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-lua-warmdream-140x190-hq.html
 lastopen = 2024-06-10 00:37:03
 
 [search]
-lastsearch = 2024-08-08 11:19:47
+lastsearch = 2024-08-08 12:27:07
 
 [www.diepxuan.com]
 match = 37.5%%
 title = Bộ chun chần WarmDream 180x200 lụa - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html?srsltid=AfmBOopSOEz6UEmuiRcAgZLXfP7Z8Yk_0FwkzrylbXaEMIz2afoFoJoQ
+url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html
 
 [www.instagram.com]
 match = -15.0%%
