--- a/images/bo-ga-goi-chun-xoa-16/config.ini
+++ b/images/bo-ga-goi-chun-xoa-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
 lastopen = 2024-06-09 23:12:29
 
 [search]
-lastsearch = 2024-08-08 10:33:14
+lastsearch = 2024-08-08 12:14:56
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -19,12 +19,12 @@ url = https://songhong.info/chan-ga-goi-bc16
 [demxanh.com]
 match = -19.0%%
 title = Bộ ga gối chun Olympia chần vải Cotton Hàn 16
-url = https://demxanh.com/bo-ga-goi-chun-olympia-chan-vai-cotton-han-16.html
+url = https://demxanh.com/bo-ga-goi-chun-olympia-chan-vai-cotton-han-16.html?srsltid=AfmBOorTVA4_ySWQujqqsHdEIe94HezQC_o9JWSz5OcYJo9w3p9qtoWs
 
 [foreverbedding.net]
 match = -57.1%%
 title = Bộ ga chun chần mặt Velina V16 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v16
+url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v16?srsltid=AfmBOopH64qb3xeIZeQZsRUn3UnftvnG-s4EoZxqU8DQogg8VbzEpfhW
 
 [changagoidemsonghong.com]
 match = -38.1%%
@@ -44,7 +44,7 @@ url = https://everonvn.com.vn/everon/2248/bo-chan-ga-everon-sr-16
 [www.diepxuan.com]
 match = -9.5%%
 title = Bộ chun xoa 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-xoa-160x200.html
+url = https://www.diepxuan.com/bo-chun-xoa-160x200.html?srsltid=AfmBOor1VLKCQ0_4orhsT0sM0CeJFZA5G9gBSBSkR1lehl7pUyydi95F
 
 [everon365.vn]
 match = 33.3%%
@@ -52,9 +52,9 @@ title = Bộ chăn ga gối everon ES1816
 url = https://everon365.vn/bo-chan-ga-goi-everon-es-1816.html
 
 [shopee.vn]
-match = -100.0%%
-title = GA CHUN TRẦN CÓ BÈO PHỦ NGẮN siêu đẹp - Ga gối nỉ ...
-url = https://shopee.vn/Bộ-GA-GỐI-NỈ-NHUNG-TRẦN-BÔNG-GA-NỈ-PHỦ-TRẦN-BÔNG-GA-CHUN-TRẦN-CÓ-BÈO-PHỦ-NGẮN-siêu-đẹp-Ga-gối-nỉ-nhung-cao-cấp-i.11781398.17889810969
+match = -66.7%%
+title = bộ chăn ga gối hè giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=bộ chăn ga gối hè
 
 [runa.vn]
 match = -23.8%%
