--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-08-08 12:00:19
+lastsearch = 2024-08-08 12:26:04
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -17,9 +17,9 @@ title = THE 10 BEST Hotels in Thai Binh, Vietnam 2024 (from $11)
 url = https://www.tripadvisor.com/Hotels-g4355220-Thai_Binh_Thai_Binh_Province-Hotels.html
 
 [www.ncbi.nlm.nih.gov]
-match = -104.3%%
-title = Effect of the COVID-19 Outbreak on the Incidence of Other ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8994859/
+match = -130.4%%
+title = Quantitative Analysis of Colistin-Resistant Escherichia coli ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7910070/
 
 [thuvienphapluat.vn]
 match = -82.6%%
@@ -28,8 +28,8 @@ url = https://thuvienphapluat.vn/van-ban/Bat-dong-san/Chi-thi-10-CT-UBND-2021-ch
 
 [sotuphap.thaibinh.gov.vn]
 match = 17.4%%
-title = THÔNG BAO DAU GIA TAI SAN Qn 10)
-url = https://sotuphap.thaibinh.gov.vn/upload/80609/20220927/TBNY_so_16_10_Hd13-2022_cua_Ngan_hang_NN_PTNT_Viet_Nam_chi_nhanh_huyen_Tien_Hai_Thai_Binh__lan_10__94ebf.pdf
+title = THÔNG BAO DAU GIA TAI SAN
+url = https://sotuphap.thaibinh.gov.vn/upload/80609/20240517/TBNY_so_117_QSDd_xa_Quynh_Minh-Quynh_Phu-Thai_Binh_df094.pdf
 
 [www.youtube.com]
 match = -78.3%%
@@ -57,9 +57,9 @@ title = Vietnam - Page 187 - Google Books Result
 url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYrZh7UZM&sig=ACfU3U31CBiJ8h1DnTUPfxlmiUXnMLSJGg&hl=en&sa=X&ved=2ahUKEwjbhsjW69uHAxXXElkFHastO8MQ6AF6BAgjEAM
 
 [www.travelweekly.com]
-match = -87.0%%
-title = Ho Chi Minh City Hotels Near Jade Emperor Pagoda- Page 10
-url = https://www.travelweekly.com/Hotels/Ho-Chi-Minh-City-Vietnam/Hotels-Near-Jade-Emperor-Pagoda-p4247472?s=2+u3NLAzhVE=u&pg=10
+match = -39.1%%
+title = Ho Chi Minh City Hotels Near XO Tours- Page 10
+url = https://www.travelweekly.com/Hotels/Ho-Chi-Minh-City-Vietnam/Hotels-Near-XO-Tours-p6738693?pg=10
 
 [sonoivu.thaibinh.gov.vn]
 match = -78.3%%
@@ -440,4 +440,9 @@ url = https://www.hsbc.com.vn/en-vn/contact/branch-finder/
 match = -73.9%%
 title = Thai Binh ZIP code - The most updated Thai Binh postal ...
 url = https://phaata.com/en/zip-code/thai-binh-zip-code-1249.html
+
+[www.cia.gov]
+match = -34.8%%
+title = CURRENT INTELLIGENCE BULLETIN - 1954/06/29
+url = https://www.cia.gov/readingroom/document/03001372
 
