--- a/images/chieu-cay-ht-18/config.ini
+++ b/images/chieu-cay-ht-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-18.html
 lastopen = 2024-06-09 22:15:47
 
 [search]
-lastsearch = 2024-08-08 06:51:05
+lastsearch = 2024-08-08 12:16:42
 
 [shadow.vn]
 match = -140.0%%
@@ -22,9 +22,9 @@ title = Đèn pin FENIX HT18 Hunting (1500 Lumens)
 url = https://bisu.vn/den-pin-fenix-ht18-hunting-1500-lumens-p18720670.html
 
 [www.youtube.com]
-match = -206.7%%
-title = cách chăm sóc cây cảnh dành cho người không có thời gian
-url = https://www.youtube.com/watch?v=Kh-Oz_aXslQ
+match = -226.7%%
+title = Camera ảnh nhiệt đo từ xa siêu nét HT-18 ,phát hiện người ...
+url = https://www.youtube.com/watch?v=5NpZqtNbB4Y
 
 [vnqtech.com]
 match = -200.0%%
@@ -107,9 +107,9 @@ title = HT-18 Thermal Imager (220×160)
 url = https://hti-instrument.com/products/ht18-thermal-imager
 
 [www.htlight.vn]
-match = -53.3%%
-title = Đèn chiếu cây TAB TG 4202 - HTLIGHT
-url = https://www.htlight.vn/den-chieu-cay-tab-tg-4202.html
+match = -60.0%%
+title = Đèn âm đất hắt cây 18W - HTLIGHT
+url = https://www.htlight.vn/den-am-dat-hat-cay-18w.html
 
 [www.diepxuan.com]
 match = -80.0%%
