--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-08-08 08:06:29
+lastsearch = 2024-08-08 12:13:30
 
 [shopee.vn]
-match = -152.6%%
-title = [Có sẵn] Chiếu trúc chiếu tre cho trẻ em, chieu truc hat nằm ...
-url = https://shopee.vn/-Có-sẵn-Chiếu-trúc-chiếu-tre-cho-trẻ-em-chieu-truc-hat-nằm-đẹp-mát-an-toàn-i.610736536.19889705939?publish_id=&sp_atk=af5df5ac-0fd0-4055-b8be-0e66d8e9614c&xptdk=af5df5ac-0fd0-4055-b8be-0e66d8e9614c
+match = -36.8%%
+title = Chiếu trúc, chiếu tre HT nan nhỏ siêu mát
+url = https://shopee.vn/Chiếu-trúc-chiếu-tre-HT-nan-nhỏ-siêu-mát-i.141565512.24776596764
 
 [chieutrelanlan.com]
 match = -105.3%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ không viền màu vàng Size: 1mx1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m/chieu-truc-hat-nho-khong-vien-mau-vang-1mx1m9-94.html
 
 [www.youtube.com]
-match = -142.1%%
-title = Bé Khỏe Bé Ngoan ♫ Mai Vy - Thần Đồng Âm Nhạc Việt Nam ...
-url = https://www.youtube.com/watch?v=rSwTEpTTNY8
+match = -147.4%%
+title = Nhạc Thiếu Nhi Vui Nhộn Cho Bé Yêu - Dậy Đi Ba Ơi, Chúc ...
+url = https://www.youtube.com/watch?v=or-AKdAjpMI
 
 [dochoihoangthu.com]
 match = -121.1%%
@@ -240,4 +240,14 @@ url = https://nemsaithanh.com/san-pham/chieu-truc-135.html
 match = 63.2%%
 title = Chiếu Cói. chieu tre em
 url = http://chieucoi.vn/chieu-coi-so-sinh
+
+[baocaovien.vn]
+match = -147.4%%
+title = Tạo dựng không gian chung cư an toàn và hạnh phúc cho ...
+url = https://baocaovien.vn/tin-tuc/tao-dung-khong-gian-chung-cu-an-toan-va-hanh-phuc-cho-tre-em/145858.html
+
+[www.baokontum.com.vn]
+match = -152.6%%
+title = Bế mạc Hội thi kiến thức, kỹ năng phòng chống đuối nước ...
+url = https://www.baokontum.com.vn/van-hoa-the-thao-du-lich/be-mac-hoi-thi-kien-thuc-ky-nang-phong-chong-duoi-nuoc-tre-em-42297.html
 
