--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-08-08 05:38:42
+lastsearch = 2024-08-08 12:21:13
 
 [shopee.vn]
 match = 25.0%%
@@ -390,4 +390,9 @@ url = https://xaydungchinhsach.chinhphu.vn/toan-van-quyet-dinh-phe-duyet-quy-hoa
 match = -206.2%%
 title = Cảnh báo chiêu trò lừa đảo bán thuốc đặc trị trên mạng xã ...
 url = https://thoibaotaichinhvietnam.vn/canh-bao-chieu-tro-lua-dao-ban-thuoc-dac-tri-tren-mang-xa-hoi-156442.html
+
+[hunglien.net]
+match = 37.5%%
+title = Chiếu lạc - Hưng Liên
+url = http://hunglien.net/san-pham/chieu-lac/
 
