--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-08-08 11:46:07
+lastsearch = 2024-08-08 12:23:45
 
 [chieutrucsaigon.com]
 match = -8.3%%
@@ -127,9 +127,9 @@ title = Hướng dẫn quần chúng nhân dân và các đoàn đến viếng .
 url = https://xaydungchinhsach.chinhphu.vn/tphcm-huong-dan-quan-chung-nhan-dan-va-cac-doan-den-vieng-tong-bi-thu-nguyen-phu-trong-119240724110435557.htm
 
 [thuvienphapluat.vn]
-match = -79.2%%
-title = Thông tư 12/2019/TT-BCT xuất xứ hàng hóa trong Hiệp ...
-url = https://thuvienphapluat.vn/van-ban/Xuat-nhap-khau/Thong-tu-12-2019-TT-BCT-xuat-xu-hang-hoa-trong-Hiep-dinh-khung-ve-hop-tac-kinh-te-toan-dien-420674.aspx
+match = -104.2%%
+title = Nghị định 19/2019/NĐ-CP quy định về họ hụi biêu phường ...
+url = https://thuvienphapluat.vn/van-ban/Tien-te-Ngan-hang/Nghi-dinh-19-2019-ND-CP-quy-dinh-ve-ho-hui-bieu-phuong-386324.aspx
 
 [tamanhhospital.vn]
 match = -91.7%%
