--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-08 05:22:41
+lastsearch = 2024-08-08 12:27:48
 
 [www.tiktok.com]
 match = -235.3%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -211.8%%
-title = Supplement op het algemeen aardrijkskundig woordenboek: door ...
-url = https://books.google.com/books?id=fvuWQ1D6QdYC&pg=PA458&lpg=PA458&dq=man+in+hoa+dep+16&source=bl&ots=IEPDE9SGv5&sig=ACfU3U1f1safAdQj_-zWLR-gVZLIOtm2xw&hl=en&sa=X&ved=2ahUKEwjwzaLU1eOHAxXmDzQIHR_nLycQ6AF6BAg0EAM
+match = -158.8%%
+title = The Monthly Army List - Page 23 - Google Books Result
+url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdofl85jY&sig=ACfU3U3ziuW5-kRISQbfRK-l89wFTdWnqg&hl=en&sa=X&ved=2ahUKEwiUhr_M1OSHAxV1rokEHSF4Gi8Q6AF6BAggEAM
 
 [tax.vermont.gov]
 match = -29.4%%
