--- a/images/man-tu-bung-16/config.ini
+++ b/images/man-tu-bung-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-16.html
 lastopen = 2024-06-09 23:58:19
 
 [search]
-lastsearch = 2024-08-08 09:21:50
+lastsearch = 2024-08-08 12:24:25
 
 [www.bible.com]
 match = -135.7%%
@@ -27,9 +27,9 @@ title = màn chụp đỉnh vuông tự bung
 url = https://munghoangphat.com/man-chup-dinh-vuong-tu-bung/
 
 [manthutrang.com]
-match = -221.4%%
-title = Màn chụp tự bung cho người lớn: Tư vấn chọn mua và sử ...
-url = https://manthutrang.com/blogs/news/man-chup-tu-bung-cho-nguoi-lon-tu-van-chon-mua-va-su-dung
+match = -207.1%%
+title = Hướng dẫn phân biệt màn tự bung cao cấp và màn nhái ...
+url = https://manthutrang.com/blogs/news/huong-dan-phan-biet-man-tu-bung-cao-cap-va-man-nhai-gia-re
 
 [easydream.vn]
 match = -185.7%%
@@ -52,9 +52,9 @@ title = Màn chụp tự bung Gia Long 16x18x2cm - Loại 2 cửa
 url = https://boba.vn/man-chup-tu-bung-nguoi-lon/man-chup-tu-bung-gia-long-1-6-1-8x-2m-loai-2-cua
 
 [shopee.vn]
-match = -178.6%%
-title = Màn chụp - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/màn chụp
+match = -128.6%%
+title = màn chụp giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=màn chụp
 
 [text.egwwritings.org]
 match = -78.6%%
@@ -142,9 +142,9 @@ title = Minister Pi Lalrinpuii'n Mizo lal huaisen Zakapa Fanai nun ...
 url = https://dipr.mizoram.gov.in/post/minister-pi-lalrinpuiin-mizo-lal-huaisen-zakapa-fanai-nun-behchanna-siam-docu-drama-film-tlangzarh
 
 [www.facebook.com]
-match = -107.1%%
-title = Holy Bible (Mizo) | Johana 3:15-18
-url = https://www.facebook.com/groups/MizoHolyBible/posts/johana-315-18tupawh-a-ring-apiangin-amah-avanga-chatuana-nunna-an-neihna-turin-p/4674411329291742/
+match = -178.6%%
+title = Màn Chụp Tự Bung Hà Nội hotline 0963.325.228 | Hanoi
+url = https://www.facebook.com/ManTuBungDinhVuong/
 
 [wol.jw.org]
 match = -85.7%%
