--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-08-08 10:41:17
+lastsearch = 2024-08-08 12:18:46
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -47,9 +47,9 @@ title = Nem Lai Vung, from a rustic dish to a heritage
 url = https://www.vietnam.vn/en/nem-lai-vung-tu-mon-an-dan-da-tro-thanh-di-san/
 
 [wattclarity.com.au]
-match = -142.9%%
-title = Balancing Supply and Demand …. in the fast approaching ' ...
-url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-rawofftarget/
+match = -76.2%%
+title = Expect the unexpected - It's the NEM after all
+url = https://wattclarity.com.au/articles/2022/02/expect-the-unexpected-its-the-nem-after-all/
 
 [books.google.com]
 match = -123.8%%
@@ -252,9 +252,9 @@ title = Idarubicine Treatment of Acute Myeloblastic Leukemia During ...
 url = https://www.jcog.com.tr/pdf/?pdf=d8ef007c2333e3bc22fd94ac0c236dcb
 
 [www.formatbiz.it]
-match = -100.0%%
-title = Nem Dubrovnik unveils its 10 Keynote Speakers for 10 ...
-url = https://www.formatbiz.it/dettNews.aspx?id=9944
+match = -66.7%%
+title = NEM Dubrovnik 2025 Dates Announced Following ...
+url = https://www.formatbiz.it/dettNews.aspx?id=11677
 
 [yro.slashdot.org]
 match = -114.3%%
