CI images update

--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-08 11:18:45
+lastsearch = 2024-08-08 12:31:27
 
 [batdongsan.com.vn]
 match = -240.0%%
@@ -485,4 +485,9 @@ url = https://vietinbank.vn/mang-luoi-chi-nhanh-atm
 match = -33.3%%
 title = Mình là lính e55 ( e732 )
 url = https://www.quansuvn.net/index.php?topic=7742.370
+
+[conganbacgiang.gov.vn]
+match = -186.7%%
+title = Việt Yên: Va chạm giao thông làm 01 người bị thương
+url = https://conganbacgiang.gov.vn/viet-yen-va-cham-giao-thong-lam-01-nguoi-bi-thuong.html
 
