--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -52,9 +52,9 @@ title = Bão từ mạnh nhất trong hai thập kỷ gây ảnh hưởng tới 
 url = https://baothanhhoa.vn/bao-tu-manh-nhat-trong-hai-thap-ky-gay-anh-huong-toi-viet-nam-214083.htm
 
 [shophoavungtau.com]
-match = -89.5%%
-title = Ý nghĩa hoa mộc lan: Vẻ đẹp của sự thuần khiết
-url = https://shophoavungtau.com/y-nghia-hoa-moc-lan
+match = -78.9%%
+title = Hướng dẫn Cách trồng Hoa Chuông Gió Tại Nhà
+url = https://shophoavungtau.com/cach-trong-cay-hoa-chuong-gio
 
 [tiin.vn]
 match = -147.4%%
