--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-08-08 02:32:12
+lastsearch = 2024-08-08 12:32:06
 
 [burningman.org]
-match = 0.0%%
-title = 
+match = -60.0%%
+title = The 10 Principles of Burning Man
 url = https://burningman.org/about/10-principles/
 
 [www.usatoday.com]
@@ -372,8 +372,8 @@ title = WSBTV Atlanta News, Weather, Traffic and Sports – WSB-TV ...
 url = https://www.wsbtv.com/homepage
 
 [www.realmadrid.com]
-match = 14.3%%
-title = Real Madrid CF
+match = -18.2%%
+title = Real Madrid
 url = https://www.realmadrid.com/en-US
 
 [www.massresort.com]
