--- a/images/nem-pyeoda-thuong-16/config.ini
+++ b/images/nem-pyeoda-thuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-16.html
 lastopen = 2024-06-18 17:43:07
 
 [search]
-lastsearch = 2024-08-08 05:33:21
+lastsearch = 2024-08-08 12:31:06
 
 [changagoidemtamhao.com]
 match = -10.0%%
@@ -17,14 +17,14 @@ title = Bộ chăn ga gối Singapore Gold 5 gối Pyeoda 16
 url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-16.html
 
 [demxanh.com]
-match = -40.0%%
-title = Chăn ga gối Tencel Pyeoda Hàn Quốc đa sắc
-url = https://demxanh.com/chan-ga-goi-tencel-pyeoda-han-quoc-da-sac.html
+match = -75.0%%
+title = Chăn ga gối Tencel Pyeoda Hàn Quốc đa sắc 5 món 16
+url = https://demxanh.com/chan-ga-goi-tencel-pyeoda-han-quoc-da-sac-5-mon-16.html?srsltid=AfmBOorQO1wVapVTIB7plOnNP35PW1pxtipM9KvxMsT77w2rSScF2lvk
 
 [www.facebook.com]
-match = -75.0%%
-title = Vua Nệm - 🌼 SỞ HỮU BỘ CHĂN GA GẤM CAO CẤP ...
-url = https://www.facebook.com/vuanem.vn/posts/-sở-hữu-bộ-chăn-ga-gấm-cao-cấp-pyeoda-tiết-kiệm-tới-66-vua-nệm-xả-kho-188-39-đồn/1462549323889165/
+match = -145.0%%
+title = Hé lộ siêu phẩm mới - bộ chăn ga Pyeoda Dora Xem chi tiết ...
+url = https://www.facebook.com/vuanem.vn/videos/-hé-lộ-siêu-phẩm-mới-bộ-chăn-ga-pyeoda-dora-xem-chi-tiết-httpsvuanemcombo-chan-g/1219711438195514/
 
 [shopee.vn]
 match = -70.0%%
