CI images update

--- a/images/tam-trai-topper-everon/config.ini
+++ b/images/tam-trai-topper-everon/config.ini
@@ -57,9 +57,9 @@ title = Tấm trải / Topper - K-Bedding
 url = https://kbedding.vn/danh-muc/nem/tam-trải-topper/
 
 [dailyeveron.vn]
-match = -45.5%%
-title = Tấm Trải Văn Phòng EVERON, tấm trải tiện ích Everon
-url = https://dailyeveron.vn/phu-kien-dem/tam-trai-van-phong-everon.html
+match = 59.1%%
+title = Tấm Trải Mát Cool Pad EVERON
+url = https://dailyeveron.vn/phu-kien-dem/tam-trai-mat-cool-pad-everon.html
 
 [everon.online]
 match = 31.8%%
