--- a/images/chan-3-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-3-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:46:49
 
 [search]
-lastsearch = 2024-08-08 05:44:21
+lastsearch = 2024-08-08 12:57:44
 
 [shopee.vn]
 match = 7.4%%
@@ -17,9 +17,9 @@ title = Chăn Lông Tuyết Thái Sịn, Chăn Mền Mùa Đông Khổ ...
 url = https://h5.lazada.vn/products/chan-long-tuyet-thai-sin-chan-men-mua-dong-kho-rong-loai-2kg-3kg-4kg-5kg-size-17mx2m-2mx2m3-i2564626690-s12540487699.html
 
 [www.lazada.vn]
-match = -11.1%%
-title = Chăn Lông Tuyết Thái Sịn, Chăn Mền Mùa Đông Khổ ...
-url = https://www.lazada.vn/products/chan-long-tuyet-thai-sin-chan-men-mua-dong-kho-rong-loai-2kg-3kg-4kg-5kg-size-18mx2m-2mx2m3-sanbeovn-i2015859119.html
+match = -44.4%%
+title = Mền Lông Tuyết Thái Giá Tốt T08/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/men-long-tuyet-thai/
 
 [tiki.vn]
 match = 11.1%%
