--- a/images/chan-4-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-4-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:17:35
 
 [search]
-lastsearch = 2024-08-08 11:48:06
+lastsearch = 2024-08-08 12:59:08
 
 [shopee.vn]
 match = -25.9%%
@@ -147,9 +147,9 @@ title = CHĂN LÔNG GẤU TUYẾT BẮC CỰC XÁM (SINGLE) - Lasante
 url = https://lasantevn.com/chan-long-gau-tuyet-bac-cuc-xam-1-mat-lasante-phap/
 
 [demxanh.com]
-match = 11.1%%
-title = Chăn tuyết Hàn Quốc Soft 2kg kẻ hồng
-url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-ke-hong.html
+match = 7.4%%
+title = Chăn tuyết đa sắc 2.5kg màu hồng nhạt
+url = https://demxanh.com/chan-long-tuyet-da-sac-2.5kg-mau-hong-nhat.html
 
 [vnvc.vn]
 match = -59.3%%
