--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -112,8 +112,8 @@ title = Chuông lắc cầm tay hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chuông lắc cầm tay
 
 [vishipel.com.vn]
-match = -260.0%%
-title = Về việc thiết lập mới phao báo hiệu hàng hải chuyên dùng “D1” ...
+match = -226.7%%
+title = Về việc thiết lập mới phao báo hiệu hàng hải chuyên dùng ...
 url = https://vishipel.com.vn/ve-viec-thiet-lap-moi-phao-bao-hieu-hang-hai-chuyen-dung-d1-d2-gioi-han-khu-vuc-thi-cong-cong-trinh-nha-may-dien-gio-ca-mau-1d.htm
 
 [www.victoriavn.com]
