--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-08-08 07:01:34
+lastsearch = 2024-08-08 12:57:23
 
 [dongagroup.vn]
 match = -272.7%%
@@ -22,9 +22,9 @@ title = Giường tầng sắt
 url = https://noithatduongdong.com/giuong-tang-sat
 
 [giuonggaphoaphat.com]
-match = -81.8%%
-title = GIƯỜNG GẤP NHẬP KHẨU NHẬT BẢN
-url = http://giuonggaphoaphat.com/giuong-nhap-khau-nhat-ban
+match = -245.5%%
+title = GIƯỜNG GẤP NÂNG ĐẦU NHẬT BẢN RỘNG 67.5 PHÂN ...
+url = http://giuonggaphoaphat.com/giuong-gap-nang-dau-nhat-ban
 
 [tunhuamiennam.com]
 match = -245.5%%
