--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -82,8 +82,8 @@ title = Bulova Official Site | Bulova
 url = https://www.bulova.com/us/en/
 
 [www.ksat.com]
-match = -233.3%%
-title = San Antonio News, Texas News, Sports, Weather from KSAT ...
+match = -57.1%%
+title = KSAT 12
 url = https://www.ksat.com/
 
 [marijuana-anonymous.org]
