--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm.h
 lastopen = 2024-06-30 21:10:28
 
 [search]
-lastsearch = 2024-08-08 11:55:23
+lastsearch = 2024-08-08 12:46:56
 
 [www.everonvn.vn]
 match = 31.1%%
@@ -22,9 +22,9 @@ title = Nệm lò xo Kingkoil Cloud Firm
 url = https://nemragoi.com/nem-lo-xo-kingkoil-cloud-firm.html
 
 [everonkorea.com]
-match = 23.4%%
-title = Đệm lò xo Kingkoil Cloud Firm cao 27cm - Everon Korea
-url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-firm/
+match = 31.8%%
+title = Đệm lò xo Kingkoil Cloud Pillow Top cao 27cm
+url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-pillow-top/
 
 [everon.com.vn]
 match = 23.4%%
