CI images update

--- a/images/chieu-dieu-hoa-khong-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-15.html
 lastopen = 2024-06-09 23:41:33
 
 [search]
-lastsearch = 2024-08-08 12:38:40
+lastsearch = 2024-08-08 13:31:10
 
 [demxanh.com]
 match = 0.0%%
@@ -165,4 +165,9 @@ url = https://voicon.net/bo-chieu-goi-dieu-hoa-cao-cap/
 match = -11.1%%
 title = Thực hư câu chuyện về chiếu " điều hòa "
 url = https://nemngungon.vn/thuc-hu-cau-chuyen-ve-chieu-dieu-hoa/
+
+[khonemtonghop.com]
+match = -33.3%%
+title = Chiếu Điều Hòa Là Gì? TOP 4 Chiếu Điều Hòa Hot Nhất ...
+url = https://khonemtonghop.com/chieu-dieu-hoa-la-gi/
 
