--- a/images/chieu-truc-den-khong-vien-lson-15/config.ini
+++ b/images/chieu-truc-den-khong-vien-lson-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-15.html
 lastopen = 2024-06-07 00:20:03
 
 [search]
-lastsearch = 2024-08-08 12:44:30
+lastsearch = 2024-08-08 13:29:04
 
 [demxanh.com]
 match = 42.4%%
@@ -162,9 +162,9 @@ title = Chiếu trúc đen không viền 1m6x2m [Được kiểm hàng ...
 url = https://www.sendo.vn/chieu-truc-den-khong-vien-1m6x2m-duo-c-kie-m-ha-ng-31981016-117250610.html
 
 [thegioichieutruc.com]
-match = 6.1%%
-title = Địa chỉ bán chiếu trúc hạt đen tại 63 tỉnh thành
-url = https://thegioichieutruc.com/dia-chi-ban-chieu-truc-hat-den-tai-63-tinh-thanh/
+match = 0.0%%
+title = Địa chỉ bán chiếu trúc tại TP. Hồ Chí Minh (Sài Gòn)
+url = https://thegioichieutruc.com/dia-chi-ban-chieu-truc-tai-tp-ho-chi-minh-sai-gon/
 
 [dms.gov.vn]
 match = -48.5%%
