--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-08-08 09:17:16
+lastsearch = 2024-08-08 13:24:38
 
 [demxanh.com]
 match = 18.2%%
@@ -17,9 +17,9 @@ title = Thảm ghế thảm giường - Trang 5
 url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=price-desc&page=5
 
 [thegioidemonline.vn]
-match = -109.1%%
-title = Thảm trải giường lông cừu giá rẻ TLC07 - Hà Nội - Chăn ga gối
-url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc07.html
+match = -50.0%%
+title = Thảm trải giường lông cừu TLC04 giá rẻ - Hà Nội
+url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc-04.html
 
 [noithatkenli.vn]
 match = -27.3%%
@@ -59,7 +59,7 @@ url = https://www.animemusicvideos.org/members/members_myprofile.php?user_id=122
 [jysk.vn]
 match = -72.7%%
 title = Kích thước giường ngủ tiêu chuẩn và thông dụng ...
-url = https://jysk.vn/kich-thuoc-giuong-ngu?srsltid=AfmBOoqrDPZblqg7AXWRyodB0OqdiTpx1box0bZnigC0XaLdK4uyaHe-
+url = https://jysk.vn/kich-thuoc-giuong-ngu
 
 [anawood.vn]
 match = 15.8%%
@@ -112,9 +112,9 @@ title = 1 tấm ga trải giường Thẩm mỹ viện đồng bằng ...
 url = https://www.lazada.vn/products/1-tam-ga-trai-giuong-tham-my-vien-dong-bang-tam-ga-trai-giuong-cotton-than-thien-voi-da-cham-mem-mai-chong-co-mat-xa-spa-cokhong-co-lo-i2534625342.html
 
 [vn.my-best.com]
-match = -72.7%%
-title = [2024] Top 10 Ga Trải Giường tốt nhất hiện nay ...
-url = https://vn.my-best.com/37098
+match = -81.8%%
+title = [2024] Top 10 Ga Chống Thấm tốt nhất hiện nay ...
+url = https://vn.my-best.com/37473
 
 [www.booking.com]
 match = -136.4%%
