--- a/images/chan-5-kg-kq-khong-song/config.ini
+++ b/images/chan-5-kg-kq-khong-song/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-5-kg-kq-khong-song.html
 lastopen = 2024-06-09 23:49:54
 
 [search]
-lastsearch = 2024-08-08 09:52:49
+lastsearch = 2024-08-08 13:19:24
 
 [demxanh.com]
 match = -60.9%%
 title = Chăn lông cừu là gì? Nên chọn loại chăn lông cừu nào?
-url = https://demxanh.com/chan-long-cuu-la-gi-nen-chon-loai-chan-long-cuu-nao.html
+url = https://demxanh.com/chan-long-cuu-la-gi-nen-chon-loai-chan-long-cuu-nao.html?srsltid=AfmBOopDUw6eGGvHqztgsC3eMhhSAz6VPIr6bfXkykTqWA19sHiEG40A
 
 [shopee.vn]
 match = 43.5%%
@@ -19,12 +19,12 @@ url = https://shopee.vn/Chăn-lông-KQ-đẹp-loại-5kg-i.67105795.1540972315
 [www.diepxuan.com]
 match = 26.1%%
 title = Chăn KQ sóng 5kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-kq-song-5kg.html
+url = https://www.diepxuan.com/chan-kq-song-5kg.html?srsltid=AfmBOooSrY_n4d-hy5YpubF9Gh--euwfCeEEOKbx-BzMweeibTE1G6hf
 
 [thegioidemonline.com]
 match = 45.0%%
 title = Chăn lông KQ cao cấp
-url = https://thegioidemonline.com/chan-long-kq-ma-01.html
+url = https://thegioidemonline.com/chan-long-kq-ma-01.html?srsltid=AfmBOordosIyQU7Z0Mb5jOu_sjr5_ju0n1N8YmVp9ycz1VfCLEfUY714
 
 [www.youtube.com]
 match = -87.0%%
