--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-08-08 06:51:49
+lastsearch = 2024-08-08 13:19:01
 
 [en.wikipedia.org]
 match = -16.7%%
@@ -27,14 +27,14 @@ title = QSC K12.2 premium powered, 12-inch, two-way loudspeaker
 url = https://www.qsc.com/solutions-products/loudspeakers/portable/powered/portable-pa/k2-series/k122/
 
 [www.ncbi.nlm.nih.gov]
-match = -200.0%%
-title = Discovery of a novel third-generation EGFR inhibitor and ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7218543/
+match = -223.5%%
+title = Translational strategies for neuroprotection in ischemic stroke
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3933947/
 
 [books.google.com]
-match = -223.5%%
-title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=chan+5+kg+kq+song&source=bl&ots=zGiWQLrHYG&sig=ACfU3U3gFR8tGYzUV5Jr_Eha-7jLAxcBWQ&hl=en&sa=X&ved=2ahUKEwjOlff96uOHAxU1kokEHc23GMkQ6AF6BAgZEAM
+match = -200.0%%
+title = Reactive Oxygen Species in Chemistry, Biology, and Medicine
+url = https://books.google.com/books?id=p5LkBwAAQBAJ&pg=PA123&lpg=PA123&dq=chan+5+kg+kq+song&source=bl&ots=XG0v3y48Ff&sig=ACfU3U2se3u8HTEGPJ-_ufUbDBVcai03jA&hl=en&sa=X&ved=2ahUKEwiS9eOF4OSHAxWiFFkFHWsTAfEQ6AF6BAgYEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
