--- a/images/chieu-nhua-ha-noi-14/config.ini
+++ b/images/chieu-nhua-ha-noi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-14.html
 lastopen = 2024-06-09 22:51:04
 
 [search]
-lastsearch = 2024-08-08 10:38:27
+lastsearch = 2024-08-08 13:30:28
 
 [www.diepxuan.com]
-match = 15.0%%
-title = Chiếu nhựa Hà Nội 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-140x190.html?srsltid=AfmBOooLxWV7ZBEWXG4S8UcDivTZFryeW5n4IJj-TI99HFAylxDehAIP
+match = 10.0%%
+title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
 
 [shopee.vn]
 match = -35.0%%
@@ -28,8 +28,8 @@ url = https://tiki.vn/search?q=chiếu nhựa việt nam 2mx4m
 
 [www.yellowpages.vn]
 match = 10.0%%
-title = chiếu nhựa, chiếu cói ở tại hà nội
-url = https://www.yellowpages.vn/class/490435/chiếu-nhựa,-chiếu-cói-ở_hà-nội.html
+title = danh sách Chiếu Nhựa
+url = https://www.yellowpages.vn/tgcls/10490435/Chiếu-Nhựa.html?j=0
 
 [trangvangvietnam.com]
 match = -90.0%%
