--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-08-08 12:01:45
+lastsearch = 2024-08-08 13:30:49
 
 [www.diepxuan.com]
-match = 17.9%%
-title = Điệp Xuân Ga chun EPCARLESS 180x200
+match = 25.0%%
+title = Ga chun EPCARLESS 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/ga-chun-epcarless-180x200.html
 
 [www.qcyc.ca]
@@ -87,8 +87,8 @@ title = Gallery
 url = http://www.lacecarriage.com/gallery2.htm
 
 [bizonauto.com]
-match = -96.4%%
-title = News educations days A school where children learn to eat better ...
+match = -107.1%%
+title = A school where children learn to eat better - 英语点津News ...
 url = https://bizonauto.com/index3.php?name=https://xn--80aqaehuekgcjc7j.xn--p1ai/3758269488fe
 
 [picclick.co.uk]
