--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-08 12:27:48
+lastsearch = 2024-08-08 13:28:43
 
 [www.tiktok.com]
 match = -235.3%%
@@ -69,7 +69,7 @@ url = https://www.pinterest.com/pin/1087971222468991265/
 [books.google.com]
 match = -158.8%%
 title = The Monthly Army List - Page 23 - Google Books Result
-url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdofl85jY&sig=ACfU3U3ziuW5-kRISQbfRK-l89wFTdWnqg&hl=en&sa=X&ved=2ahUKEwiUhr_M1OSHAxV1rokEHSF4Gi8Q6AF6BAggEAM
+url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdoflc2fU&sig=ACfU3U3IflD6hsIbD5v3DzzRFuBIQuwgTA&hl=en&sa=X&ved=2ahUKEwiOmbWb4uSHAxU0EVkFHehpIukQ6AF6BAglEAM
 
 [tax.vermont.gov]
 match = -29.4%%
