--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-08-08 11:58:16
+lastsearch = 2024-08-08 13:21:12
 
 [www.gov.uk]
 match = -200.0%%
@@ -702,9 +702,9 @@ title =
 url = https://m.youtube.com/watch?v=RmrUILNxii0
 
 [www.facebook.com]
-match = -7.7%%
-title = Ozzy Osbourne
-url = https://www.facebook.com/ozzyosbourne/
+match = 0.0%%
+title = Barack Obama
+url = https://www.facebook.com/barackobama/
 
 [egov.uscis.gov]
 match = -113.3%%
@@ -764,7 +764,7 @@ url = https://www.usc.edu/
 [www.usnews.com]
 match = 0.0%%
 title = 
-url = https://www.usnews.com/best-colleges/bowdoin-college-2038/overall-rankings
+url = https://www.usnews.com/best-colleges/university-of-redlands-1322
 
 [www.wyndhamhotels.com]
 match = -226.7%%
@@ -852,9 +852,9 @@ title =
 url = https://football-ranking.com/rankByConfederation?zone=AFC&period=
 
 [www.coe.edu]
-match = 0.0%%
-title = 
-url = https://www.coe.edu/why-coe/discover-coe/facts-figures
+match = -233.3%%
+title = Coe College: One of the Best Small Colleges in the Country
+url = https://www.coe.edu/
 
 [www.endocrine.org]
 match = -73.3%%
@@ -1230,4 +1230,9 @@ url = https://www.ecu.org/
 match = -253.3%%
 title = ABC13 Houston news, weather and traffic - Latest Texas news ...
 url = https://abc13.com/
+
+[www.redlands.edu]
+match = -26.7%%
+title = University of Redlands
+url = https://www.redlands.edu/
 
