--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-08-08 11:47:26
+lastsearch = 2024-08-08 13:32:30
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -407,7 +407,7 @@ title =
 url = https://www.prnewswire.com/news-releases/announcing-the-2024-us-presidential-scholars-in-the-arts-302141477.html
 
 [dcc.ligo.org]
-match = -152.6%%
-title = https://dcc.ligo.org/public/0150/M1800027/005/LSC-...
+match = -78.9%%
+title = LSC Feb 2018 author list (tex) - LIGO DCC
 url = https://dcc.ligo.org/public/0150/M1800027/005/LSC-Authors-Feb-2018.tex
 
