--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-08-08 12:47:40
+lastsearch = 2024-08-08 13:28:03
 
 [everonvn.com.vn]
 match = -11.1%%
@@ -12,8 +12,8 @@ title = Bộ Everon Ep1831 - Curtis
 url = https://everonvn.com.vn/everon/630/bo-everon-ep1831
 
 [www.lazada.vn]
-match = -111.1%%
-title = ♀Hoạt động♀Chất lượng cao Vỏ gối bông 45x65 etami ...
+match = -161.1%%
+title = Hoạt động♀Chất lượng cao Vỏ gối bông 45x65 etami, mềm mại ...
 url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1
 
 [www.reddit.com]
@@ -32,18 +32,18 @@ title = Lịch sử giá 🥑 Vỏ gối đầu cotton poly 45x65 🥑 áo gối
 url = https://muathongminh.vn/xu-huong-vo-goi-dau-cotton-poly-45x65-ao-goi-nam-nhieu-mau-sac-mau-bo-xam-duoc-chon-mau-p.1__19609304624__137416996
 
 [www.diepxuan.com]
-match = 0.0%%
-title = Vỏ gối EP1818 45x65 - Điệp Xuân
+match = 11.1%%
+title = Điệp Xuân Vỏ gối EP1818 45x65
 url = https://www.diepxuan.com/vo-goi-ep1818-45x65.html
 
 [www.everonqb.com]
 match = -111.1%%
-title = Vỏ gối EPM21065 45x65 - Everon Quảng Bình Trang Chủ
-url = https://www.everonqb.com/vo-goi-epm21065-45x65.html
+title = Vỏ gối EPM21072 45x65 - Everon Quảng Bình Trang Chủ
+url = https://www.everonqb.com/vo-goi-epm21072-45x65.html
 
 [shopee.vn]
-match = -116.7%%
-title = GA TRẦN BỌC NỆM THÊU GẤU TEDDY XINH XẮN ĐỦ ...
+match = -127.8%%
+title = GA TRẦN BỌC NỆM THÊU GẤU TEDDY XINH XẮN ĐỦ 3size
 url = https://shopee.vn/product/146440345/13756241998?gsht=StznoKFCWptXK5Vt
 
 [sieuthicholon.com]
