CI images update

--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-08-08 12:35:55
+lastsearch = 2024-08-08 13:39:57
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -27,9 +27,9 @@ title = Chiếu Lác: Nơi bán giá rẻ, uy tín, chất lượng nhất
 url = https://websosanh.vn/s/chiếu+lác.htm
 
 [www.youtube.com]
-match = -212.5%%
-title = Bí quyết TỎI NGÂM GIẤM Trắng giòn hoàn toàn không Xanh ...
-url = https://www.youtube.com/watch?v=5RCmbqC2JFY
+match = -162.5%%
+title = Mẹo Hay Luộc Đậu Phộng Nhanh Mềm Không Thâm Đen ...
+url = https://www.youtube.com/watch?v=vVLK7BEIS-g
 
 [tuyensinh247.com]
 match = -218.8%%
@@ -42,9 +42,9 @@ title = KẾT QUẢ CHỌN TẠO GIỐNG LẠC CHỊU MẶN LDH.09 ...
 url = https://asisov.org.vn/cay-thuc-pham/ket-qua-chon-tao-giong-lac-chiu-man-ldh-09-cho-vung-duyen-hai-nam-trung-bo-400.html
 
 [shopee.vn]
-match = 0.0%%
-title = Chiếu Lác Nhựa Mát Mẻ Bền Đẹp
-url = https://shopee.vn/Chiếu-Lác-Nhựa-Mát-Mẻ-Bền-Đẹp-i.58697470.5071220147
+match = -43.8%%
+title = Chiếu lác màu xuất khẩu bao dày đẹp
+url = https://shopee.vn/Chiếu-lác-màu-xuất-khẩu-bao-dày-đẹp-i.821808889.16482308101
 
 [www.thegioididong.com]
 match = -193.8%%
@@ -182,9 +182,9 @@ title = Chơi game Tài xỉu|Casino Online: Bước Chân Vào Thế Giới ...
 url = https://kq.tomec.vn/Rna/Chơi-game-Tài-xỉu.aspx
 
 [laodong.vn]
-match = -218.8%%
-title = Ô tô địa hình băng đá lội bùn dưới chân rồng khổng lồ ở Huế
-url = https://laodong.vn/photo/o-to-dia-hinh-bang-da-loi-bun-duoi-chan-rong-khong-lo-o-hue-1356221.ldo
+match = -106.2%%
+title = Mùa giải V.League 2024-2025 có gì hấp dẫn?
+url = https://laodong.vn/bong-da/mua-giai-vleague-2024-2025-co-gi-hap-dan-1377645.ldo
 
 [ting.hujiang.com]
 match = -12.5%%
@@ -227,9 +227,9 @@ title = chelsea vs🍯 【WW88.game】Casino Online Châu Á
 url = https://hoanghaco.com.vn/ios/farmer_pyramid_summer/
 
 [www.facebook.com]
-match = -22.2%%
-title = Nhược Lạc
-url = https://www.facebook.com/nhuoclac.writing/
+match = -118.8%%
+title = BBC News Tiếng Việt added a new photo. ...
+url = https://www.facebook.com/100064688586481/photos/898251185674493/
 
 [baocaobang.vn]
 match = -218.8%%
