--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-08-08 09:58:41
+lastsearch = 2024-08-08 13:43:01
 
 [www.instagram.com]
-match = -238.5%%
-title = Hoi Chan (@hoichandraws) • Instagram photos and videos
-url = https://www.instagram.com/hoichandraws/?hl=en
+match = -30.8%%
+title = Yuki Chan (@yukichan_la)
+url = https://www.instagram.com/yukichan_la/?hl=en
 
 [www.linkedin.com]
 match = 23.1%%
@@ -22,9 +22,9 @@ title = Hoi Chan draws on scientific illustrations to create 'muted ...
 url = https://www.creativeboom.com/inspiration/hoi-chan/
 
 [www.facebook.com]
-match = 33.3%%
-title = Yuk Hoi Chan
-url = https://www.facebook.com/hoihihoi/
+match = 7.7%%
+title = Yuki-Chan Cosplay
+url = https://www.facebook.com/YukiChansp/
 
 [happypaca.tumblr.com]
 match = -276.9%%
@@ -47,9 +47,9 @@ title =
 url = https://www.behindthename.com/name/yuki01chan/submitted
 
 [hk.linkedin.com]
-match = -223.1%%
-title = Chan Hoi Ching - Hong Kong SAR | Professional Profile
-url = https://hk.linkedin.com/in/chan-hoi-ching-381002b7
+match = -184.6%%
+title = Chan Hoi Lam Karen - RSVP communications Limited
+url = https://hk.linkedin.com/in/chan-hoi-lam-karen-ba4155140
 
 [www.eduhk.hk]
 match = -200.0%%
@@ -87,9 +87,9 @@ title = CH.6 by Yuki Chan on Prezi
 url = https://prezi.com/audhwqir0lhx/ch6/
 
 [tel.directory.gov.hk]
-match = -46.2%%
-title = Civil Engineering Office
-url = https://tel.directory.gov.hk/0275013459_ENG.html
+match = -30.8%%
+title = Legal Services Section
+url = https://tel.directory.gov.hk/0259000037_ENG.html
 
 [www.straitstimes.com]
 match = -161.5%%
