--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-08-08 11:28:47
+lastsearch = 2024-08-08 13:40:38
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -22,9 +22,9 @@ title = Chiếu Tăm H&T - Chiếu Thanh Hương Trúc cao cấp
 url = https://chieutruc.info/chieu-tam-ht/
 
 [www.thietbidiendgp.vn]
-match = -46.7%%
-title = Đèn mắt ếch chiếu điểm HT 8094 10W
-url = https://www.thietbidiendgp.vn/products/den-mat-ech-chieu-diem-ht-8094-10w
+match = -13.3%%
+title = Đèn chiếu điểm HT MAX LIGHT
+url = https://www.thietbidiendgp.vn/hang/htlight/den-chieu-sang/den-chieu-diem-htlight
 
 [www.htlightlevel.vn]
 match = -193.3%%
@@ -57,9 +57,9 @@ title = HT - Exoticzone
 url = https://hactexoticzone.com/
 
 [www.youtube.com]
-match = -206.7%%
-title = cách chăm sóc cây cảnh dành cho người không có thời gian
-url = https://www.youtube.com/watch?v=Kh-Oz_aXslQ
+match = -120.0%%
+title = 🔴 Nhịp đập thị trường ngày 7/8/2024 | VTC1
+url = https://www.youtube.com/watch?v=OaxcA4iAyZw
 
 [thaibinhseed.com.vn]
 match = -193.3%%
