--- a/images/chieu-lac-gam-12/config.ini
+++ b/images/chieu-lac-gam-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-12.html
 lastopen = 2024-06-06 16:54:12
 
 [search]
-lastsearch = 2024-08-08 12:53:52
+lastsearch = 2024-08-08 13:38:09
 
 [www.diepxuan.com]
 match = 62.5%%
@@ -38,13 +38,13 @@ url = https://moon.vn/hoi-dap/mot-con-lac-don-co-chieu-dai-l-duoc-treo-duoi-gam-
 
 [vietjack.com]
 match = -193.8%%
-title = Cách tính chu kì, tần số của Con lắc lò xo (hay, chi tiết)
-url = https://vietjack.com/vat-ly-lop-12/tinh-chu-ki-tan-so-cua-con-lac-lo-xo.jsp
+title = Cách tìm năng lượng dao động, tìm lực căng dây của con ...
+url = https://vietjack.com/vat-ly-lop-12/nang-luong-con-lac-don-va-luc-cang-day.jsp
 
 [olm.vn]
 match = -187.5%%
-title = Một con lắc đơn có chiều dài l m được treo dưới gầm cầu ...
-url = https://olm.vn/cau-hoi/mot-con-lac-don-co-chieu-dai-l-m-duoc-treo-duoi-gam-cau-cach-mat-nuoc-12-m-con-lac-don-dao-dong-dieu-hoa-voi-bien-do-goc-a-o-01.321451557569
+title = Một con lắc đơn có chiều dài 3 m được treo dưới gầm cầu ...
+url = https://olm.vn/cau-hoi/mot-con-lac-don-co-chieu-dai-3-m-duoc-treo-duoi-gam-cau-cach-mat-nuoc-12-m-con-lac-don-dao-dong-dieu-hoa-voi-bien-do-goc-a-0.280805632788
 
 [www.vietjack.com]
 match = -193.8%%
