--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-08-08 13:26:00
+lastsearch = 2024-08-08 13:55:06
 
 [everonvn.com.vn]
 match = -133.3%%
@@ -17,9 +17,9 @@ title = Everon Quảng Bình Ga phủ EPC19056 160x200
 url = https://www.everonqb.com/ga-phu-epc19056-160x200.html
 
 [www.diepxuan.com]
-match = -19.0%%
-title = Chiếu cây HT 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-150x190.html
+match = 14.3%%
+title = Ga phủ ESM20013 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/ga-phu-esm20013-180x200.html
 
 [muathongminh.vn]
 match = -142.9%%
@@ -27,8 +27,8 @@ title = Trọn bộ chăn ga gối satin poly 7 món ga phủ trần bông ...
 url = https://muathongminh.vn/tron-bo-chan-ga-goi-satin-poly-7-mon-ga-phu-tran-bong-koseul-san-hang-p.1__7418213403__16397825
 
 [beecost.vn]
-match = -176.2%%
-title = Lịch sử giá Srm set chăn ga gối 5 món cotton living drap hàn ...
+match = -147.6%%
+title = Srm set chăn ga gối 5 món cotton living drap hàn quốc ...
 url = https://beecost.vn/srm-set-chan-ga-goi-5-mon-cotton-living-drap-han-quoc-ga-phu-giuong-chan-bong-day-cao-cap-he-thong-n-p.1__9631034161__146302121
 
 [www.reef2reef.com]
