--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-08-08 12:36:36
+lastsearch = 2024-08-08 13:48:56
 
 [us.misumi-ec.com]
 match = -325.0%%
@@ -349,7 +349,7 @@ url = https://pc.fsu.edu/
 [books.google.com]
 match = -333.3%%
 title = Der n-tv-Atlas: die Welt hinter den Nachrichten ; [mit ...
-url = https://books.google.com/books?id=lFboHwfSwFsC&pg=PA360&lpg=PA360&dq=ga+phu+uc+16&source=bl&ots=-SL0uDTDUG&sig=ACfU3U2K3cFWObWwCthuz6DrRlF5i7eJig&hl=en&sa=X&ved=2ahUKEwix47rI1uSHAxUHmYkEHfSQBGwQ6AF6BAglEAM
+url = https://books.google.com/books?id=lFboHwfSwFsC&pg=PA360&lpg=PA360&dq=ga+phu+uc+16&source=bl&ots=-SL0uDXHOF&sig=ACfU3U07Euanh67BtNVNsxZW2kaYZzvoeg&hl=en&sa=X&ved=2ahUKEwjs39zd5uSHAxUBhYkEHaCfF0cQ6AF6BAgmEAM
 
 [issuu.com]
 match = -175.0%%
