--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-08-08 10:46:48
+lastsearch = 2024-08-08 13:49:15
 
 [en.wikipedia.org]
-match = 21.7%%
-title = Timeline of Korean history
-url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
+match = 8.7%%
+title = Korea under Japanese rule
+url = https://en.wikipedia.org/wiki/Korea_under_Japanese_rule
 
 [www.britannica.com]
 match = 0.0%%
@@ -92,9 +92,9 @@ title = 1968 Annual Supplement - Page 1252 - Google Books Result
 url = https://books.google.com/books?id=Xk32BwAAQBAJ&pg=PA1252&lpg=PA1252&dq=ruot+nem+korea+9f+14+19&source=bl&ots=P-88eZiahc&sig=ACfU3U1OKKy7su1PXp6GrPJTYIpXi8G8Qw&hl=en&sa=X&ved=2ahUKEwjvs9WGqs2HAxUJrYkEHSL2C14Q6AF6BAgqEAM
 
 [30rates.com]
-match = -91.3%%
-title = USD to JPY forecast for tomorrow, this week and month.
-url = https://30rates.com/usd-to-jpy-forecast-converter-dollar-to-yen
+match = -104.3%%
+title = Gold Price Prediction For Tomorrow, This Week And Month.
+url = https://30rates.com/gold-price-forecast-and-predictions
 
 [www.ncbi.nlm.nih.gov]
 match = -95.7%%
@@ -159,7 +159,7 @@ url = https://www.aljazeera.com/news/2024/7/19/on-north-koreas-tense-border-swis
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=3e5d0a5c4fd189c4&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwj7jPeCvuSHAxWLFDQIHYjzCnQQsZYEegQISxAC
+url = https://www.google.com/search?sca_esv=87cd9f5db8b9fddc&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwiVwdzm5uSHAxUgm4kEHUhhFhgQsZYEegQIUhAC
 
 [produccionesitaca.es]
 match = -21.4%%
@@ -419,7 +419,7 @@ url = https://m.facebook.com/wallingford4140/?locale=hu_HU
 [twitter.com]
 match = -34.8%%
 title = League of Legends (@LeagueOfLegends) / X
-url = https://twitter.com/leagueoflegends?lang=en
+url = https://twitter.com/leagueoflegends
 
 [apnews.com]
 match = -108.7%%
