--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-08-08 12:50:43
+lastsearch = 2024-08-08 13:41:59
 
 [www.reddit.com]
-match = -104.3%%
-title = Riot is cutting back budget on esports? : r/leagueoflegends
-url = https://www.reddit.com/r/leagueoflegends/comments/9aqbes/riot_is_cutting_back_budget_on_esports/
+match = -82.6%%
+title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
+url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
 match = -58.3%%
@@ -87,9 +87,9 @@ title = Russian Offensive Campaign Assessment, April 26, 2024
 url = https://understandingwar.org/backgrounder/russian-offensive-campaign-assessment-april-26-2024
 
 [www.youtube.com]
-match = -69.6%%
-title = These Zed Mains Have MASTERED Their Champion...
-url = https://www.youtube.com/watch?v=unNbUPEKVtA
+match = -104.3%%
+title = Billy Joel - We Didn't Start the Fire (Official HD Video)
+url = https://www.youtube.com/watch?v=eFTLKWw542g
 
 [www.ft.com]
 match = -8.7%%
