--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-08-08 12:52:28
+lastsearch = 2024-08-08 13:54:45
 
 [bilystore.vn]
 match = -81.0%%
 title = Thảm phòng ngủ NA14 - Bilystore thảm trải sàn cao cấp
-url = https://bilystore.vn/tham-phong-ngu-na14/
+url = https://bilystore.vn/tham-phong-ngu-na14/?srsltid=AfmBOop8uje20N0lr7K3XIBZYWOt1ovVPKajB2skqOVygF2qhtwtILVj
 
 [shopee.vn]
 match = -33.3%%
