--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-08 12:31:27
+lastsearch = 2024-08-08 13:49:05
 
 [batdongsan.com.vn]
 match = -240.0%%
@@ -22,9 +22,9 @@ title = Danh Sách Các Sân Cầu Lông Ở Bình Thạnh Mới Nhất
 url = https://shopvnb.com/danh-sach-cac-san-cau-long-o-binh-thanh-moi-nhat.html
 
 [m.facebook.com]
-match = 6.7%%
-title = ForG Architects
-url = https://m.facebook.com/ForGArchitects/
+match = -186.7%%
+title = Hội Những Người Ở Ký Túc Xá Khu B - KTX ĐHQG TP.HCM
+url = https://m.facebook.com/groups/hoiktxkhub/posts/2412387952475003/
 
 [thaivietgroup.com]
 match = -20.0%%
@@ -112,8 +112,8 @@ title = Chuông lắc cầm tay hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chuông lắc cầm tay
 
 [vishipel.com.vn]
-match = -226.7%%
-title = Về việc thiết lập mới phao báo hiệu hàng hải chuyên dùng ...
+match = -260.0%%
+title = Về việc thiết lập mới phao báo hiệu hàng hải chuyên dùng “D1” ...
 url = https://vishipel.com.vn/ve-viec-thiet-lap-moi-phao-bao-hieu-hang-hai-chuyen-dung-d1-d2-gioi-han-khu-vuc-thi-cong-cong-trinh-nha-may-dien-gio-ca-mau-1d.htm
 
 [www.victoriavn.com]
@@ -490,4 +490,14 @@ url = https://www.quansuvn.net/index.php?topic=7742.370
 match = -186.7%%
 title = Việt Yên: Va chạm giao thông làm 01 người bị thương
 url = https://conganbacgiang.gov.vn/viet-yen-va-cham-giao-thong-lam-01-nguoi-bi-thuong.html
+
+[baochinhphu.vn]
+match = -160.0%%
+title = Kiểm tra để được phục hồi điểm giấy phép lái xe
+url = https://baochinhphu.vn/de-xuat-noi-dung-bai-kiem-tra-de-duoc-phuc-hoi-diem-giay-phep-lai-xe-102240805185345089.htm
+
+[baotainguyenmoitruong.vn]
+match = -246.7%%
+title = TP Hà Nội: Quận Ba Đình thí điểm trông giữ xe không dùng ...
+url = https://baotainguyenmoitruong.vn/tp-ha-noi-quan-ba-dinh-thi-diem-trong-giu-xe-khong-dung-tien-mat-377988.html
 
