--- a/images/chan-hoi-to-ong/config.ini
+++ b/images/chan-hoi-to-ong/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-to-ong.html
 lastopen = 2024-06-09 23:18:52
 
 [search]
-lastsearch = 2024-08-08 11:29:09
+lastsearch = 2024-08-08 13:48:44
 
 [www.instagram.com]
 match = -173.3%%
@@ -67,9 +67,9 @@ title = Civil Servants Advanced Search
 url = https://www.directory.gov.hk/advance_search2.jsp;jsessionid=99F27B93AD62B7E5177AC6539CC5F708?dn0=&surname_c=start&surname=&fname_c=start&fname=&title_c=start&title=&tel_c=start&tel=2594624&fax_c=equal&fax=&tel2_c=start&tel2=&mail_c=start&mail=&counter=0&&lang=eng&validate=yes&src=aservant&sort=cn&
 
 [repository.hku.hk]
-match = 6.7%%
-title = Dr Chan Hoi Shan Sophelia
-url = https://repository.hku.hk/cris/rp/rp02210
+match = 40.0%%
+title = Chan, Hoi Yan Celia
+url = https://repository.hku.hk/cris/rp/rp00498
 
 [www.protocol.gov.hk]
 match = -173.3%%
@@ -257,8 +257,8 @@ title = Chan, Hoi Wing
 url = https://scholar.google.hr/citations?user=o9lF5bAAAAAJ&hl=th
 
 [scholar.google.ch]
-match = 64.3%%
-title = Chan, Hoi Wing
+match = -26.7%%
+title = ‪Chan, Hoi Wing‬ - ‪Google Scholar‬
 url = https://scholar.google.ch/citations?user=o9lF5bAAAAAJ&hl=vi
 
 [www.tiktok.com]
