--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-coi-viet-thai-18.html
 lastopen = 2024-06-06 16:54:00
 
 [search]
-lastsearch = 2024-08-08 09:59:21
+lastsearch = 2024-08-08 14:02:06
 
 [chieutruc.info]
-match = -63.6%%
-title = Bảng giá chiếu Thái Lan dòng gấp vân gỗ cao cấp
-url = https://chieutruc.info/chieu-thai-lan-gap-van-go/
+match = -100.0%%
+title = Bảng giá chiếu cói Xuân Hòa xuất khẩu - hàng Việt Nam cao ...
+url = https://chieutruc.info/chieu-coi-xuan-hoa/
 
 [tiki.vn]
 match = -36.4%%
@@ -24,11 +24,11 @@ url = https://m.facebook.com/groups/400243538122762/posts/989653909181719/
 [nhathuoclongchau.com.vn]
 match = -104.5%%
 title = Mang thai 18 tuần nặng bao nhiêu cân để bé phát triển tốt?
-url = https://nhathuoclongchau.com.vn/bai-viet/thai-18-tuan-nang-bao-nhieu-thay-doi-cua-me-bau-mang-thai-18-tuan.html?srsltid=AfmBOoqvuqUS3BEI0-pogq2sk8B_B8fAQKP3POIWSSblAEyHYUx6R7Qt
+url = https://nhathuoclongchau.com.vn/bai-viet/thai-18-tuan-nang-bao-nhieu-thay-doi-cua-me-bau-mang-thai-18-tuan.html
 
 [www.vinmec.com]
-match = 4.5%%
-title = Sự phát triển của thai nhi tuần 18
+match = 0.0%%
+title = 
 url = https://www.vinmec.com/vie/bai-viet/su-phat-trien-cua-thai-nhi-tuan-18-vi
 
 [www.youtube.com]
@@ -42,9 +42,9 @@ title = Chiếu Cói Cao Cấp Nga Sơn
 url = https://www.facebook.com/chieucoiviettrang/
 
 [medlatec.vn]
-match = -77.3%%
-title = Bác sĩ giải đáp tỉ mỉ các chỉ số thai nhi theo tuần
-url = https://medlatec.vn/tin-tuc/bac-si-giai-dap-ti-mi-cac-chi-so-thai-nhi-theo-tuan-s74-n23646
+match = -109.1%%
+title = Sự phát triển của thai 18 tuần và những thay đổi trên cơ ...
+url = https://medlatec.vn/tin-tuc/su-phat-trien-cua-thai-18-tuan-va-nhung-thay-doi-tren-co-the-thai-phu-s74-n28778
 
 [www.lazada.vn]
 match = -40.9%%
