--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-08-08 11:28:03
+lastsearch = 2024-08-08 13:46:56
 
 [shopee.vn]
 match = -28.0%%
@@ -47,9 +47,9 @@ title = Các đối sách lớn của Đài Loan trong những năm tiếp theo
 url = https://nghiencuuchienluoc.org/cac-doi-sach-lon-cua-dai-loan-trong-nhung-nam-tiep-theo/
 
 [books.google.com]
-match = -44.0%%
-title = Chiến sĩ Cộng Hòa - Page 25 - Google Books Result
-url = https://books.google.com/books?id=X2clAAAAMAAJ&pg=RA5-PA25&lpg=RA5-PA25&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=p30SQH4XNr&sig=ACfU3U36OFcx6p9MsrzIHWFL6J0T6y6YEw&hl=en&sa=X&ved=2ahUKEwiD-fKdjeOHAxUuCTQIHYt3PZUQ6AF6BAg7EAM
+match = -96.0%%
+title = Địa chí Tiền Giang - Volume 2 - Page 958 - Google Books Result
+url = https://books.google.com/books?id=eacMAQAAMAAJ&pg=PA958&lpg=PA958&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=jtZNzBvDIm&sig=ACfU3U0ZVWnsyVwJlCp5XS9Lf2VQ2YUxqA&hl=en&sa=X&ved=2ahUKEwjziLmk5uSHAxUlCnkGHYeeHawQ6AF6BAgZEAM
 
 [cellphones.com.vn]
 match = -52.0%%
