--- a/images/man-tu-bung-dinh-vuong18/config.ini
+++ b/images/man-tu-bung-dinh-vuong18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong18.html
 lastopen = 2024-06-07 00:52:24
 
 [search]
-lastsearch = 2024-08-08 10:18:31
+lastsearch = 2024-08-08 13:49:24
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -180,4 +180,9 @@ url = https://m.facebook.com/photo.php?fbid=760418262787126&set=a.54832019733026
 match = 70.8%%
 title = Màn Chụp Tự Bung Đỉnh Vuông
 url = https://tbmart.vn/san-pham/man-chup-tu-bung-dinh-vuong/
+
+[bonggio.com]
+match = 16.7%%
+title = Gạch bông gió đỏ đất nung Vuông 18
+url = https://bonggio.com/product/gach-bong-gio-do-dat-nung-vuong-18/
 
