--- a/images/tham-giuong-bo-de-15/config.ini
+++ b/images/tham-giuong-bo-de-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-15.html
 lastopen = 2024-06-07 00:36:08
 
 [search]
-lastsearch = 2024-08-08 12:22:18
+lastsearch = 2024-08-08 13:50:26
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -47,9 +47,9 @@ title = Bộ giường tủ cổ điển nhập khẩu GR B15
 url = https://greenfurni.vn/bo-giuong-tu-co-dien-nhap-khau-gr-b15/
 
 [noithattana.vn]
-match = -60.0%%
-title = Bộ Giường Tủ Gỗ MDF Hiện Đại Nhập Khẩu TA-D15
-url = https://noithattana.vn/san-pham/bo-giuong-tu-go-mdf-hien-dai-nhap-khau-ta-d11/
+match = -140.0%%
+title = Bộ giường ngủ tân cổ điển giá rẻ đẹp, cao cấp nhập khẩu ...
+url = https://noithattana.vn/giuong-tu-tan-co-dien/
 
 [tiki.vn]
 match = -50.0%%
@@ -82,9 +82,9 @@ title = Giường - Sản phẩm mùa hè
 url = https://www.quiphuc.com/collections/giuong-san-pham-mua-he
 
 [sumika.vn]
-match = -140.0%%
-title = Giường xếp gọn, ghế xếp là hai sản phẩm tiện ích của ...
-url = https://sumika.vn/ghe-xep-giuong-xep-839
+match = -65.0%%
+title = Giường xếp gọn - Thiết bị gia dụng SUMIKA
+url = https://sumika.vn/giuong-xep-gon-846
 
 [noithatanhuy.com.vn]
 match = -5.0%%
@@ -207,9 +207,9 @@ title = Thảm Trải Giường | Hanoi
 url = https://www.facebook.com/ShopThamTraiGiuong/
 
 [erado.vn]
-match = -105.0%%
-title = Top Địa Chỉ Mua Giường Ngủ Cao Cấp Nhập Khẩu Uy Tín ...
-url = https://erado.vn/giuong-da-that-nhap-khau.html
+match = 0.0%%
+title = Giường ngủ bọc da mã AM3-01
+url = https://erado.vn/giuong-dang-giam-gia/giuong-ngu-boc-da-ma-am3-01.html
 
 [www.diyaudio.com]
 match = -65.0%%
