--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-08-08 11:17:21
+lastsearch = 2024-08-08 13:47:20
 
 [www.diepxuan.com]
 match = 40.9%%
@@ -12,9 +12,9 @@ title = Thảm giường nỉ 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/tham-giuong-ni-160x200.html
 
 [demxanh.com]
-match = -22.7%%
-title = Thảm trải giường lông cừu TLC 06 - Hà Nội
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
+match = 18.2%%
+title = Thảm trải giường lông cừu TLC 02
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-02.html
 
 [www.lazada.vn]
 match = -113.6%%
@@ -97,8 +97,8 @@ title = Thảm trải sàn phòng ngủ chính hãng, giá tốt
 url = https://flexhouse.vn/tham-trai-san-phong-ngu
 
 [decosy.com]
-match = 4.5%%
-title = Furniture & Decoration
+match = -50.0%%
+title = Furniture & Decoration - Decosy Vietnam
 url = https://decosy.com/vi_VN/shop/category/phong-ngu-giuong-1167
 
 [maybedding.vn]
@@ -127,9 +127,9 @@ title = Pin by Alesha Faicco on Desks - bedroom
 url = https://www.pinterest.com/pin/pin-von-alesha-faicco-auf-desks-bedroom--565483296932165432/
 
 [tonybed.com]
-match = -40.0%%
-title = Đầu giường
-url = https://tonybed.com/dau-giuong/
+match = -4.5%%
+title = Bộ Drap Ga Trải Giường Modal - 21
+url = https://tonybed.com/bo-drap-ga-trai-giuong-modal-21/
 
 [dongagroup.vn]
 match = -100.0%%
