CI images update

--- a/images/nem-di-a-mon-7f-14-tc/config.ini
+++ b/images/nem-di-a-mon-7f-14-tc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-7f-14-tc.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-08-08 12:56:22
+lastsearch = 2024-08-08 14:20:44
 
 [www.diepxuan.com]
 match = -81.0%%
@@ -385,4 +385,9 @@ url = https://assets.disclosurequest.com/Archives/edgar/data/2008636/00020086362
 match = -50.0%%
 title = 1908 - D.pdf
 url = https://www.phmc.state.pa.us/bah/dam/rg/di/r11_089_BirthIndexes/Birth_1908/D.PDF
+
+[lookout.lake-elsinore.org]
+match = -95.2%%
+title = WQMP Rosetta Canyon Volume Two - IIS Windows Server
+url = https://lookout.lake-elsinore.org/WebLink/DocView.aspx?id=390071&dbid=0&repo=CityDMS
 
