--- a/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-16.html
 lastopen = 2024-06-09 23:20:09
 
 [search]
-lastsearch = 2024-08-08 05:17:29
+lastsearch = 2024-08-08 14:20:23
 
 [shopee.vn]
 match = 35.3%%
@@ -24,7 +24,7 @@ url = https://goni.vn/chieu-dieu-hoa-goni/
 [demxanh.com]
 match = 14.7%%
 title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOop9dw6NDjoBlYbOGgcZ84FW10EjGwuHLnBvYBQc8WH8ZwXa3KwE
+url = https://demxanh.com/chieu-dieu-hoa.html
 
 [giadunganhvan.vn]
 match = 48.0%%
