--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-08-08 13:21:52
+lastsearch = 2024-08-08 14:15:56
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -297,9 +297,9 @@ title = Ice Skating & Hockey
 url = https://evergreenrecreation.com/224/Ice-Skating-Hockey
 
 [www.biblegateway.com]
-match = -150.0%%
-title = Resansman 16,Nombres 16,Numbers 16 VKF;BDS;KJV
-url = https://www.biblegateway.com/passage/?search=Resansman 16,Nombres 16,Numbers 16&version=VKF;BDS;KJV;NKJV
+match = -185.7%%
+title = Numbers 16,Resansman 16 NIV;HCV;NKJV - Korah ...
+url = https://www.biblegateway.com/passage/?search=Numbers 16,Resansman 16&version=NIV;HCV;NKJV
 
 [www.bernzomatic.com]
 match = -257.1%%
