--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-08-08 06:41:08
+lastsearch = 2024-08-08 14:16:38
 
 [www.lazada.vn]
 match = -105.6%%
@@ -17,9 +17,9 @@ title = NEM-12
 url = https://www.coastpneumatics.com/product/NEM-12/
 
 [m.facebook.com]
-match = -133.3%%
-title = Người Việt Bolsa/Orange County | 💥Nem Nướng Nha Trang
-url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2888077278009303/
+match = -177.8%%
+title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai
+url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
 
 [thegioinem.com]
 match = -105.6%%
@@ -27,9 +27,9 @@ title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
 url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.facebook.com]
-match = -155.6%%
-title = Món Ngon Người Việt Houston | Mai thứ sáu 07/12/24 có ...
-url = https://www.facebook.com/groups/monngonnvh/posts/mai-thứ-sáu-071224-có-bún-nem-nướng-9bánh-bột-chiên-5chè-sương-sa-bánh-lọt-5bánh/26396130619978251/
+match = -72.2%%
+title = NEM Fashion - 𝑪𝒉𝒓𝒊𝒔𝒕𝒎𝒂𝒔 𝑰𝒔 𝑪𝒐𝒎𝒊𝒏𝒈… 𝟐𝟎:𝟎𝟎
+url = https://www.facebook.com/story.php/?story_fbid=755958299900203&id=100064581196454
 
 [eva.vn]
 match = -150.0%%
@@ -37,14 +37,14 @@ title = 9X gói nem 10 cái đẹp như 10 nhờ mẹo cực hay, trữ đông .
 url = https://eva.vn/bep-eva/9x-goi-nem-10-cai-dep-nhu-10-nho-meo-cuc-hay-tru-dong-nem-de-lau-van-ngon-c162a501885.html
 
 [www.tiktok.com]
-match = -77.8%%
-title = How Long to Cook Nem Nuong in Air Fryer
-url = https://www.tiktok.com/discover/how-long-to-cook-nem-nuong-in-air-fryer
+match = -155.6%%
+title = Hướng Dẫn Cách Đánh Cú Ném Biên Siêu Cấp #clashofclans ...
+url = https://www.tiktok.com/@akarigaming66/video/7366906266075106576?lang=en
 
 [www.youtube.com]
-match = -150.0%%
-title = Nem Nướng Theo Cách Này Dù Không Dùng Mỡ Mà Vẫn Béo ...
-url = https://www.youtube.com/watch?v=aVTZUMebQ4M
+match = -161.1%%
+title = [Review] Đồ ăn vặt SIÊU HOT SIÊU NGON | Gato Cam, Xiên ...
+url = https://www.youtube.com/watch?v=4kSe7u2xwEI
 
 [www.kymdan.com]
 match = -166.7%%
