--- a/images/tham-nhung-bali-160x230/config.ini
+++ b/images/tham-nhung-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-160x230.html
 lastopen = 2024-06-07 00:35:43
 
 [search]
-lastsearch = 2024-08-08 12:24:44
+lastsearch = 2024-08-08 14:12:47
 
 [demxanh.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Thảm Lì Bali - Thảm Trải Sàn Nhập Khẩu 100%% Cao Cấp ...
 url = https://www.lazada.vn/products/tham-li-bali-tham-trai-san-nhap-khau-100-cao-cap-sang-trong-120x160cm-160x230cm-trang-tri-phong-khach-phong-ngu-chup-hinhvv-i1557646010-s11108591003.html?from_gmc=1&fl_tag=1
 
 [tiki.vn]
-match = -73.9%%
-title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm mã 30
-url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-ma-30-p38118690.html
+match = -65.2%%
+title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm mới
+url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-moi-p41436661.html?spid=41436690
 
 [thegioidemviet.vn]
 match = -65.2%%
