CI images update

--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-08-08 13:46:56
+lastsearch = 2024-08-08 14:42:26
 
 [shopee.vn]
 match = -28.0%%
@@ -47,9 +47,9 @@ title = Các đối sách lớn của Đài Loan trong những năm tiếp theo
 url = https://nghiencuuchienluoc.org/cac-doi-sach-lon-cua-dai-loan-trong-nhung-nam-tiep-theo/
 
 [books.google.com]
-match = -96.0%%
-title = Địa chí Tiền Giang - Volume 2 - Page 958 - Google Books Result
-url = https://books.google.com/books?id=eacMAQAAMAAJ&pg=PA958&lpg=PA958&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=jtZNzBvDIm&sig=ACfU3U0ZVWnsyVwJlCp5XS9Lf2VQ2YUxqA&hl=en&sa=X&ved=2ahUKEwjziLmk5uSHAxUlCnkGHYeeHawQ6AF6BAgZEAM
+match = -60.0%%
+title = Tù nhân Nhà nước: Hồi ký bí mật của Triệu Tử Dương
+url = https://books.google.com/books?id=r2fDEAAAQBAJ&pg=PT142&lpg=PT142&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=NCRcta1oRU&sig=ACfU3U3Rr2pB3i7LC3oz9u0t4JjsH4xPig&hl=en&sa=X&ved=2ahUKEwiOzpPY8uSHAxUnD1kFHQOEKKYQ6AF6BAg3EAM
 
 [cellphones.com.vn]
 match = -52.0%%
