--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-08-08 13:19:01
+lastsearch = 2024-08-08 14:36:11
 
 [en.wikipedia.org]
 match = -16.7%%
@@ -27,9 +27,9 @@ title = QSC K12.2 premium powered, 12-inch, two-way loudspeaker
 url = https://www.qsc.com/solutions-products/loudspeakers/portable/powered/portable-pa/k2-series/k122/
 
 [www.ncbi.nlm.nih.gov]
-match = -223.5%%
-title = Translational strategies for neuroprotection in ischemic stroke
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3933947/
+match = -129.4%%
+title = Mesenchymal Stem Cell Therapy in Kidney Diseases
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10074620/
 
 [books.google.com]
 match = -200.0%%
