--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -89,7 +89,7 @@ url = https://nhandan.vn/dai-loan-trung-quoc-tiep-tuc-tim-kiem-18-nguoi-mat-tich
 [www.diepxuan.com]
 match = 19.0%%
 title = Chiếu gấp Đài Loan 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html
+url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html?srsltid=AfmBOorGmZPIrgr2Wt7E4qiQf07B6QDnkhGFb5Zk6S5UPaZn5DZ6bHrM
 
 [znews.vn]
 match = -47.6%%
