--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-08-08 10:41:59
+lastsearch = 2024-08-08 14:34:41
 
 [www.lazada.vn]
 match = -94.4%%
 title = Nệm Siêu Nhẹ Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/nem-sieu-nhe/?srsltid=AfmBOopQ-f3J5S5gW-Ef8fn6wRvY49QV1RQ7BzZJNiHaZcNBjULyE-P_
+url = https://www.lazada.vn/tag/nem-sieu-nhe/
 
 [m.facebook.com]
 match = -161.1%%
@@ -87,9 +87,9 @@ title = CÙNG VÀO BẾP LÀM NEM NƯỚNG NHA TRANG SIÊU HẤP ...
 url = https://www.youtube.com/watch?v=guu4UvG6cKY
 
 [www.tiktok.com]
-match = 27.8%%
-title = Nem Nuong Air Fryer
-url = https://www.tiktok.com/discover/nem-nuong-air-fryer?lang=en
+match = -77.8%%
+title = How Long to Cook Nem Nuong in Air Fryer
+url = https://www.tiktok.com/discover/how-long-to-cook-nem-nuong-in-air-fryer
 
 [vi.wikipedia.org]
 match = -27.8%%
