--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-08-08 13:41:59
+lastsearch = 2024-08-08 14:30:33
 
 [www.reddit.com]
-match = -82.6%%
-title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
-url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
+match = -104.3%%
+title = Riot is cutting back budget on esports? : r/leagueoflegends
+url = https://www.reddit.com/r/leagueoflegends/comments/9aqbes/riot_is_cutting_back_budget_on_esports/
 
 [en.wikipedia.org]
 match = -58.3%%
@@ -474,7 +474,7 @@ url = https://www.rferl.org/a/tajikistan-russia-rahmon-youtube-respect/32084773.
 [twitter.com]
 match = -34.8%%
 title = League of Legends (@LeagueOfLegends) / X
-url = https://twitter.com/leagueoflegends
+url = https://twitter.com/leagueoflegends?lang=en
 
 [www.indiatoday.in]
 match = 0.0%%
