--- a/images/tam-trai-ks/config.ini
+++ b/images/tam-trai-ks/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks.html
 lastopen = 2024-06-07 00:26:12
 
 [search]
-lastsearch = 2024-08-08 13:56:22
+lastsearch = 2024-08-08 14:40:19
 
 [www.linkedin.com]
 match = -172.7%%
@@ -27,9 +27,9 @@ title = Tam Thi Tran Obituary - Wichita, KS
 url = https://www.dignitymemorial.com/obituaries/wichita-ks/tam-tran-9902717
 
 [www.facebook.com]
-match = -227.3%%
-title = Eat Healthier and more Economically - Salina
-url = https://www.facebook.com/SalinaRegionalHealthCenter/videos/eat-healthier-and-more-economically/859948698432933/
+match = 18.2%%
+title = Lapa Ks Trai
+url = https://www.facebook.com/lapaks.trai/
 
 [www.hoteljob.vn]
 match = -327.3%%
@@ -109,7 +109,7 @@ url = https://www.sesostrisshrine.org/pages/uploaded_files/15_JF.pdf
 [kstoolsvietnam.vn]
 match = -327.3%%
 title = Kéo cắt thép tấm KS Tools 118.0148 cắt thuận tay trái.
-url = https://kstoolsvietnam.vn/keo-cat-ton-tam/keo-cat-thep-tam-ks-tools-1180148-cat-thuan-tay-trai.html?srsltid=AfmBOoqfz1RnX1CmAvAQ4vce9lPrWX2vZCToBVLCExlkzIn5kiBq8CQ-
+url = https://kstoolsvietnam.vn/keo-cat-ton-tam/keo-cat-thep-tam-ks-tools-1180148-cat-thuan-tay-trai.html
 
 [sagatexvietnam.com.vn]
 match = -345.5%%
@@ -222,9 +222,9 @@ title = 6656 Tim Tam Trail, Tallahassee, FL 32309 - Land.com
 url = https://www.land.com/property/6656-Tim-Tam-Trail-Tallahassee-Florida-32309/20851193/
 
 [www.lazada.vn]
-match = -318.2%%
-title = KS 2023 mới trái cây sấy khô tấm nhựa đơn giản nhà ...
-url = https://www.lazada.vn/products/ks-2023-moi-trai-cay-say-kho-tam-nhua-don-gian-nha-trai-cay-phong-khach-tam-ban-tra-snack-hop-keo-chia-tam-trung-bay-i2487254892.html
+match = -336.4%%
+title = Tấm trải nệm KS, đệm xốp, đệm ghế, văn phòng thoáng khí ...
+url = https://www.lazada.vn/products/tam-trai-nem-ks-dem-xop-dem-ghe-van-phong-thoang-khi-mua-he-ghe-ngoi-ghe-mat-dem-ghe-dem-ghe-an-xe-mua-he-i2356576147.html
 
 [mkpremier.vn]
 match = -200.0%%
@@ -425,4 +425,19 @@ url = https://www.faa.gov/air_traffic/publications/atpubs/cnt_html/chap3_section
 match = -50.0%%
 title = Events
 url = https://www.rrca.org/find-events/
+
+[www.legacy.com]
+match = -245.5%%
+title = Nhan Phan Obituary (1954 - 2019) - Wichita, KS
+url = https://www.legacy.com/us/obituaries/kansas/name/nhan-phan-obituary?id=22156220
+
+[westwoodhillsks.gov]
+match = -154.5%%
+title = ordinance no. 20 - Westwood Hills
+url = https://westwoodhillsks.gov/media/City Ordinances/City Ordinances/ORD 20.PDF
+
+[chuahoiphuoc.net]
+match = -190.9%%
+title = Tam quy – Ngũ giới – Bát quan trai giới |
+url = https://chuahoiphuoc.net/tu-sach/tam-quy-ngũ-gioi-bat-quan-trai-gioi/
 
