--- a/images/chieu-nhua-ha-noi-14/config.ini
+++ b/images/chieu-nhua-ha-noi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-14.html
 lastopen = 2024-06-09 22:51:04
 
 [search]
-lastsearch = 2024-08-08 14:34:20
+lastsearch = 2024-08-08 14:48:22
 
 [www.diepxuan.com]
 match = 10.0%%
 title = Chiếu nhựa Hà Nội 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-150x190.html?srsltid=AfmBOoqo4NiibCBt_vcUKG3Fu7c00YpSQL_XuYY5ghIfZe3qCM5c8dJ5
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-150x190.html
 
 [shopee.vn]
 match = 70.0%%
