--- a/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
+++ b/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-gia-thai-2m.html
 lastopen = 2024-06-09 23:51:45
 
 [search]
-lastsearch = 2024-08-08 13:22:53
+lastsearch = 2024-08-08 14:57:04
 
 [shopee.vn]
-match = 17.2%%
-title = chiếu nhựa giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu nhựa
+match = -20.7%%
+title = Chiếu nhựa việt thái gấp gọn đa năng kích thước 2mx2m2- ...
+url = https://shopee.vn/Chiếu-nhựa-việt-thái-gấp-gọn-đa-năng-kích-thước-2mx2m2-2-2mx3m-i.125787394.21352125099
 
 [www.maihuyencorp.com]
 match = 13.8%%
