--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-08-08 13:57:25
+lastsearch = 2024-08-08 14:51:54
 
 [quizlet.com]
 match = -170.0%%
@@ -94,7 +94,7 @@ url = https://renaissancefest.com/
 [us.mbt.com]
 match = -220.0%%
 title = Men's Ren in White 702758-16L - MBT Shoes
-url = https://us.mbt.com/men-s-ren-white-702758-16l.html?srsltid=AfmBOorpJYIqjNZgIXZH1-HzX52E8rrGXgD_G636u-GVA7n-e0V91iTM
+url = https://us.mbt.com/men-s-ren-white-702758-16l.html
 
 [hopkinssports.com]
 match = -100.0%%
