--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-08-08 13:39:36
+lastsearch = 2024-08-08 14:52:36
 
 [www.diepxuan.com]
 match = 36.4%%
@@ -137,9 +137,9 @@ title = Review of Diamond Cave (Tham Phra Nang Nai) - Tripadvisor
 url = https://en.tripadvisor.com.hk/ShowUserReviews-g1507054-d14162961-r631367729-Diamond_Cave_Tham_Phra_Nang_Nai-Ao_Nang_Krabi_Town_Krabi_Province.html
 
 [vn.trip.com]
-match = -50.0%%
-title = Khách sạn giá rẻ gần Väisälänmäki, Yla-Savo
-url = https://vn.trip.com/hotels/yla-savo-vislnmki/hotels-c259329m28983437/
+match = -109.1%%
+title = Khách sạn giá rẻ gần Vammalan Helluntaiseurakunta, ...
+url = https://vn.trip.com/hotels/lounais-pirkanmaa-vammalan-helluntaiseurakunta/hotels-c259274m36707645/
 
 [www.booking.com]
 match = -109.1%%
@@ -157,7 +157,7 @@ title = Chăn drap nệm giường
 url = https://dongagroup.vn/noi-that-phong-ngu/chan-drap-nem-giuong-189.html
 
 [jysk.vn]
-match = -90.9%%
-title = Ga Chun 140 x 200 cm Bọc Nệm Cotton Satin Cao Cấp
-url = https://jysk.vn/ga-chun-140x200cm
+match = -118.2%%
+title = Seersucker duvet cover set ALICIA 200x220 multi - JYSK.vn
+url = https://jysk.vn/en-US/seersucker-duvet-cover-set-alicia-200x220-multi
 
