CI images update

--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-08-08 14:35:47
+lastsearch = 2024-08-08 15:45:34
 
 [everon.online]
 match = 15.4%%
@@ -72,14 +72,14 @@ title = Fuji Master
 url = https://fujimaster.com.vn/
 
 [store.steampowered.com]
-match = -76.9%%
-title = Tiết kiệm đến 75%% khi mua Marvel's Midnight Suns trên ...
-url = https://store.steampowered.com/app/368260/Marvels_Midnight_Suns/?l=vietnamese&curator_clanid=38262110&curator_listid=67239&snr=1_1056_1055_1056
+match = -50.0%%
+title = Tiết kiệm đến 75%% khi mua Anno 2070™ trên Steam
+url = https://store.steampowered.com/app/48240?l=vietnamese&curator_clanid=33358846
 
 [vi.wikipedia.org]
-match = -23.1%%
-title = Mậu dịch Nanban – Wikipedia tiếng Việt
-url = https://vi.wikipedia.org/wiki/Mậu_dịch_Nanban
+match = -3.8%%
+title = San Diego – Wikipedia tiếng Việt
+url = https://vi.wikipedia.org/wiki/San_Diego
 
 [baocaotaichinh.vn]
 match = -19.2%%
@@ -435,4 +435,9 @@ url = https://wtafiles.wtatennis.com/pdf/rankings/All_Career_Prize_Money.pdf.
 match = -61.5%%
 title = Chọn chăn ga gối cưới và những điều tuyệt đối phải tránh
 url = https://songhonghanoi.vn/chon-chan-ga-goi-cuoi-va-nhung-dieu-tuyet-doi-phai-tranh.html
+
+[khuyennonghaiphong.gov.vn]
+match = 4.8%%
+title = Khuyến nông hải phòng
+url = https://khuyennonghaiphong.gov.vn/
 
