--- a/images/chieu-truc-que-lam-loai-2-18/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-18.html
 lastopen = 2024-06-07 00:19:47
 
 [search]
-lastsearch = 2024-08-08 14:31:33
+lastsearch = 2024-08-08 15:44:52
 
 [chieutrelanlan.com]
 match = -7.1%%
@@ -19,7 +19,7 @@ url = https://thegioidemviet.vn/chieu-truc-que-lam/
 [demxanh.com]
 match = -28.6%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOopVGkHQ-lOmlMuD5_dWAq__pxwZiV3LWQyiBu2GitfH3rwnbHlr
 
 [shopee.vn]
 match = -3.6%%
