--- a/images/man-tu-bung-dinh-vuong18/config.ini
+++ b/images/man-tu-bung-dinh-vuong18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong18.html
 lastopen = 2024-06-07 00:52:24
 
 [search]
-lastsearch = 2024-08-08 14:44:34
+lastsearch = 2024-08-08 15:47:44
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -34,7 +34,7 @@ url = https://www.mantubung.com/man-tu-bung-dinh-vuong-1m8-x-2m-x-1m8-85258.html
 [www.lazada.vn]
 match = 25.0%%
 title = Mùng Tự Bung đỉnh Vuông Giá Tốt T08/2024
-url = https://www.lazada.vn/tag/mung-tu-bung-dinh-vuong/
+url = https://www.lazada.vn/tag/mung-tu-bung-dinh-vuong/?srsltid=AfmBOooL2KhaO_AmNhBfv__GJ8Kau5uMLez6NJ6fmAL64xLSe4W5uoUN
 
 [munghoangphat.com]
 match = 41.7%%
@@ -184,5 +184,5 @@ url = https://tbmart.vn/san-pham/man-chup-tu-bung-dinh-vuong/
 [bonggio.com]
 match = 16.7%%
 title = Gạch bông gió đỏ đất nung Vuông 18
-url = https://bonggio.com/product/gach-bong-gio-do-dat-nung-vuong-18/
+url = https://bonggio.com/product/gach-bong-gio-do-dat-nung-vuong-18/?srsltid=AfmBOorqg6k0YjvaR7CjAYBDhBKjrrQ8MnG00XNo26nRvEQueQQhDt3V
 
